commit bilingual contents

--- a/docs/visual-basic/misc/bc30293.md
+++ b/docs/visual-basic/misc/bc30293.md
@@ -1,5 +1,5 @@
 ---
-title: "<error>: '<structurename1>'contiene'<structurename2>'"
+title: <error>:' <structurename1> ' contiene ' <structurename2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30293
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30293
 ms.assetid: c9d225e7-0627-4682-97f2-fd9c7be2842b
-ms.openlocfilehash: b99791686ffa2633e74c41cd384b2106b387ada5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 257a52e75e0f3ae33385066a829658800955cbab
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663970"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390474"
 ---
-# <a name="error-structurename1-contains-structurename2"></a><span data-ttu-id="2ea54-102">\<errore >: '\<structurename1 >' contiene '\<structurename2 >'</span><span class="sxs-lookup"><span data-stu-id="2ea54-102">\<error>: '\<structurename1>' contains '\<structurename2>'</span></span>
-<span data-ttu-id="2ea54-103">Una definizione di struttura circolare è presente quando una struttura designa se stessa come uno dei propri membri.</span><span class="sxs-lookup"><span data-stu-id="2ea54-103">A circular structure definition occurs when a structure designates itself as one of its own members.</span></span>  
+# <a name="error-structurename1-contains-structurename2"></a><span data-ttu-id="ec37a-102">\<error>:' \<structurename1> ' contiene ' \<structurename2> '</span><span class="sxs-lookup"><span data-stu-id="ec37a-102">\<error>: '\<structurename1>' contains '\<structurename2>'</span></span>
+<span data-ttu-id="ec37a-103">Una definizione di struttura circolare è presente quando una struttura designa se stessa come uno dei propri membri.</span><span class="sxs-lookup"><span data-stu-id="ec37a-103">A circular structure definition occurs when a structure designates itself as one of its own members.</span></span>  
   
- <span data-ttu-id="2ea54-104">**ID errore:** BC30293</span><span class="sxs-lookup"><span data-stu-id="2ea54-104">**Error ID:** BC30293</span></span>  
+ <span data-ttu-id="ec37a-104">**ID errore:** BC30293</span><span class="sxs-lookup"><span data-stu-id="ec37a-104">**Error ID:** BC30293</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2ea54-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2ea54-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ec37a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ec37a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="2ea54-106">Modificare il nome del membro di struttura.</span><span class="sxs-lookup"><span data-stu-id="2ea54-106">Change the name of the structure member.</span></span>  
+- <span data-ttu-id="ec37a-106">Modificare il nome del membro di struttura.</span><span class="sxs-lookup"><span data-stu-id="ec37a-106">Change the name of the structure member.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2ea54-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2ea54-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ec37a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ec37a-107">See also</span></span>
 
-- [<span data-ttu-id="2ea54-108">Strutture</span><span class="sxs-lookup"><span data-stu-id="2ea54-108">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)
+- [<span data-ttu-id="ec37a-108">Strutture</span><span class="sxs-lookup"><span data-stu-id="ec37a-108">Structures</span></span>](../programming-guide/language-features/data-types/structures.md)
