--- a/docs/visual-basic/misc/bc30786.md
+++ b/docs/visual-basic/misc/bc30786.md
@@ -1,5 +1,5 @@
 ---
-title: Dichiarare le istruzioni in un modulo non possono essere dichiarate '<specifier>'
+title: Le istruzioni Declare in un modulo non possono essere dichiarate ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30786
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30786
 ms.assetid: 488b855f-72ea-414b-bffc-a5b63e97d289
-ms.openlocfilehash: a6d1cf16573657ea875ddb539255c9c05710dc4a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5946b49b6766d226b00cbb6bbd7d97684e13eed6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589379"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389384"
 ---
-# <a name="declare-statements-in-a-module-cannot-be-declared-specifier"></a><span data-ttu-id="52843-102">Dichiarare le istruzioni in un modulo non possono essere dichiarate '\<identificatore >'</span><span class="sxs-lookup"><span data-stu-id="52843-102">Declare statements in a Module cannot be declared '\<specifier>'</span></span>
-<span data-ttu-id="52843-103">Una dichiarazione `Declare` contiene un identificatore che non è valido all'interno di una dichiarazione `Module` .</span><span class="sxs-lookup"><span data-stu-id="52843-103">A `Declare` declaration has a specifier that is not valid within a `Module` declaration.</span></span> <span data-ttu-id="52843-104">Non è possibile creare istanze dei moduli, i moduli non supportano l'ereditarietà e non possono implementare le interfacce.</span><span class="sxs-lookup"><span data-stu-id="52843-104">Modules can never be instantiated, do not support inheritance, and cannot implement interfaces.</span></span>  
+# <a name="declare-statements-in-a-module-cannot-be-declared-specifier"></a><span data-ttu-id="731b6-102">Le istruzioni Declare in un modulo non possono essere dichiarate ' \<specifier> '</span><span class="sxs-lookup"><span data-stu-id="731b6-102">Declare statements in a Module cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="731b6-103">Una dichiarazione `Declare` contiene un identificatore che non è valido all'interno di una dichiarazione `Module` .</span><span class="sxs-lookup"><span data-stu-id="731b6-103">A `Declare` declaration has a specifier that is not valid within a `Module` declaration.</span></span> <span data-ttu-id="731b6-104">Non è possibile creare istanze dei moduli, i moduli non supportano l'ereditarietà e non possono implementare le interfacce.</span><span class="sxs-lookup"><span data-stu-id="731b6-104">Modules can never be instantiated, do not support inheritance, and cannot implement interfaces.</span></span>  
   
- <span data-ttu-id="52843-105">**ID errore:** BC30786</span><span class="sxs-lookup"><span data-stu-id="52843-105">**Error ID:** BC30786</span></span>  
+ <span data-ttu-id="731b6-105">**ID errore:** BC30786</span><span class="sxs-lookup"><span data-stu-id="731b6-105">**Error ID:** BC30786</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="52843-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="52843-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="731b6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="731b6-106">To correct this error</span></span>  
   
-- <span data-ttu-id="52843-107">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="52843-107">Remove the specifier.</span></span>  
+- <span data-ttu-id="731b6-107">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="731b6-107">Remove the specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="52843-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="52843-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="731b6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="731b6-108">See also</span></span>
 
-- [<span data-ttu-id="52843-109">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="52843-109">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="52843-110">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="52843-110">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+- [<span data-ttu-id="731b6-109">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="731b6-109">Delegate Statement</span></span>](../language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="731b6-110">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="731b6-110">Module Statement</span></span>](../language-reference/statements/module-statement.md)
