--- a/docs/visual-basic/misc/bc31137.md
+++ b/docs/visual-basic/misc/bc31137.md
@@ -1,5 +1,5 @@
 ---
-title: Il metodo ' RaiseEvent ' deve avere la stessa firma del tipo delegato '<signature>' dell'evento che lo contiene
+title: Il metodo ' RaiseEvent ' deve avere la stessa firma del tipo delegato '' dell'evento che lo contiene <signature>
 ms.date: 07/20/2015
 f1_keywords:
 - bc31137
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC31137
 ms.assetid: 9db77546-9205-4fd2-baf6-6eb1b46b1f1a
-ms.openlocfilehash: c49e93401eaf639423406c4f04f8fe0a5bf941ad
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: a1bdcab42daf70df689b9e0fbcdaca347da9be42
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664523"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414712"
 ---
-# <a name="raiseevent-method-must-have-the-same-signature-as-the-containing-events-delegate-type-signature"></a><span data-ttu-id="be7da-102">Il metodo ' RaiseEvent ' deve avere la stessa firma del tipo delegato dell'evento contenitore '\<Signature >'</span><span class="sxs-lookup"><span data-stu-id="be7da-102">'RaiseEvent' method must have the same signature as the containing event's delegate type '\<signature>'</span></span>
-<span data-ttu-id="be7da-103">Una dichiarazione `Custom Event` deve avere la dichiarazione `RaiseEvent` con la stessa firma del tipo delegato specificato dalla clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="be7da-103">A `Custom Event` declaration must have `RaiseEvent` declaration that has the same signature as the delegate type specified by the custom event's `As` clause.</span></span>  
+# <a name="raiseevent-method-must-have-the-same-signature-as-the-containing-events-delegate-type-signature"></a><span data-ttu-id="d4a7f-102">Il metodo ' RaiseEvent ' deve avere la stessa firma del tipo delegato '' dell'evento che lo contiene \<signature></span><span class="sxs-lookup"><span data-stu-id="d4a7f-102">'RaiseEvent' method must have the same signature as the containing event's delegate type '\<signature>'</span></span>
+<span data-ttu-id="d4a7f-103">Una dichiarazione `Custom Event` deve avere la dichiarazione `RaiseEvent` con la stessa firma del tipo delegato specificato dalla clausola `As` dell'evento personalizzato.</span><span class="sxs-lookup"><span data-stu-id="d4a7f-103">A `Custom Event` declaration must have `RaiseEvent` declaration that has the same signature as the delegate type specified by the custom event's `As` clause.</span></span>  
   
- <span data-ttu-id="be7da-104">Affinché le firme corrispondano, è necessario che la dichiarazione `RaiseEvent` e il delegato corrispondano in termini di numero e tipi di parametri.</span><span class="sxs-lookup"><span data-stu-id="be7da-104">For the signatures to match, the `RaiseEvent` declaration and the delegate must have the number of parameters, and the parameters types must match.</span></span>  
+ <span data-ttu-id="d4a7f-104">Affinché le firme corrispondano, è necessario che la dichiarazione `RaiseEvent` e il delegato corrispondano in termini di numero e tipi di parametri.</span><span class="sxs-lookup"><span data-stu-id="d4a7f-104">For the signatures to match, the `RaiseEvent` declaration and the delegate must have the number of parameters, and the parameters types must match.</span></span>  
   
- <span data-ttu-id="be7da-105">**ID errore:** BC31137</span><span class="sxs-lookup"><span data-stu-id="be7da-105">**Error ID:** BC31137</span></span>  
+ <span data-ttu-id="d4a7f-105">**ID errore:** BC31137</span><span class="sxs-lookup"><span data-stu-id="d4a7f-105">**Error ID:** BC31137</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="be7da-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="be7da-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d4a7f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d4a7f-106">To correct this error</span></span>  
   
-- <span data-ttu-id="be7da-107">Modificare i parametri della dichiarazione `RaiseEvent` in modo che corrispondano ai parametri del tipo delegato.</span><span class="sxs-lookup"><span data-stu-id="be7da-107">Change the parameters of the `RaiseEvent` declaration to match the parameters of the delegate type.</span></span>  
+- <span data-ttu-id="d4a7f-107">Modificare i parametri della dichiarazione `RaiseEvent` in modo che corrispondano ai parametri del tipo delegato.</span><span class="sxs-lookup"><span data-stu-id="d4a7f-107">Change the parameters of the `RaiseEvent` declaration to match the parameters of the delegate type.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="be7da-108">Esempio</span><span class="sxs-lookup"><span data-stu-id="be7da-108">Example</span></span>  
- <span data-ttu-id="be7da-109">Questo esempio illustra un evento personalizzato con i tipi di parametro corretti per la dichiarazione `RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="be7da-109">This example shows a custom event with the correct parameter types for the `RaiseEvent` declaration.</span></span>  
+## <a name="example"></a><span data-ttu-id="d4a7f-108">Esempio</span><span class="sxs-lookup"><span data-stu-id="d4a7f-108">Example</span></span>  
+ <span data-ttu-id="d4a7f-109">Questo esempio illustra un evento personalizzato con i tipi di parametro corretti per la dichiarazione `RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="d4a7f-109">This example shows a custom event with the correct parameter types for the `RaiseEvent` declaration.</span></span>  
   
  [!code-vb[VbVbalrEventError#2](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrEventError/VB/VbVbalrEventError.vb#2)]  
   
-## <a name="see-also"></a><span data-ttu-id="be7da-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="be7da-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d4a7f-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d4a7f-110">See also</span></span>
 
-- [<span data-ttu-id="be7da-111">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="be7da-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="be7da-112">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="be7da-112">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
-- [<span data-ttu-id="be7da-113">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="be7da-113">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="be7da-114">Eventi</span><span class="sxs-lookup"><span data-stu-id="be7da-114">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="d4a7f-111">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="d4a7f-111">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="d4a7f-112">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="d4a7f-112">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
+- [<span data-ttu-id="d4a7f-113">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="d4a7f-113">Delegate Statement</span></span>](../language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="d4a7f-114">Events</span><span class="sxs-lookup"><span data-stu-id="d4a7f-114">Events</span></span>](../programming-guide/language-features/events/index.md)
