--- a/docs/visual-basic/misc/bc31517.md
+++ b/docs/visual-basic/misc/bc31517.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>' non può essere usato come attributo perché il relativo contenitore '<containername>' non è dichiarato 'Public'
+title: Non è possibile usare il tipo '<typename>' perché il relativo contenitore '<containername>' non è dichiarato come 'Public'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31517
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31517
 ms.assetid: 3d1a8f41-8652-4e37-a6bd-40b0ad306c6f
-ms.openlocfilehash: 266c87c9179db1c204f9d11d33f261f99243cffd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 9aa80a48b64414fd73531ae2a62814e016051ca4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61789142"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365878"
 ---
-# <a name="type-typename-cannot-be-used-as-an-attribute-because-its-container-containername-is-not-declared-public"></a><span data-ttu-id="66bd6-102">Tipo '\<nomeTipo >' non può essere usato come attributo perché il relativo contenitore '\<nomecontenitore >' non è dichiarato 'Public'</span><span class="sxs-lookup"><span data-stu-id="66bd6-102">Type '\<typename>' cannot be used as an attribute because its container '\<containername>' is not declared 'Public'</span></span>
-<span data-ttu-id="66bd6-103">La classe o il modulo in cui è definito questo attributo non è dichiarato con il modificatore `Public` .</span><span class="sxs-lookup"><span data-stu-id="66bd6-103">The class or module where this attribute is defined is not declared using the `Public` modifier.</span></span> <span data-ttu-id="66bd6-104">Le classi e i moduli che non specificano un modificatore di accesso vengono dichiarati come `Friend` per impostazione predefinita.</span><span class="sxs-lookup"><span data-stu-id="66bd6-104">Classes and modules that do not specify an access modifier are declared as `Friend` by default.</span></span>  
+# <a name="type-typename-cannot-be-used-as-an-attribute-because-its-container-containername-is-not-declared-public"></a><span data-ttu-id="76c26-102">Non è possibile usare il tipo '\<typename>' perché il relativo contenitore '\<containername>' non è dichiarato come 'Public'</span><span class="sxs-lookup"><span data-stu-id="76c26-102">Type '\<typename>' cannot be used as an attribute because its container '\<containername>' is not declared 'Public'</span></span>
+<span data-ttu-id="76c26-103">La classe o il modulo in cui è definito questo attributo non è dichiarato con il modificatore `Public` .</span><span class="sxs-lookup"><span data-stu-id="76c26-103">The class or module where this attribute is defined is not declared using the `Public` modifier.</span></span> <span data-ttu-id="76c26-104">Le classi e i moduli che non specificano un modificatore di accesso vengono dichiarati come `Friend` per impostazione predefinita.</span><span class="sxs-lookup"><span data-stu-id="76c26-104">Classes and modules that do not specify an access modifier are declared as `Friend` by default.</span></span>  
   
- <span data-ttu-id="66bd6-105">**ID errore:** BC31517</span><span class="sxs-lookup"><span data-stu-id="66bd6-105">**Error ID:** BC31517</span></span>  
+ <span data-ttu-id="76c26-105">**ID errore:** BC31517</span><span class="sxs-lookup"><span data-stu-id="76c26-105">**Error ID:** BC31517</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="66bd6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="66bd6-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="76c26-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="76c26-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="66bd6-107">Aggiungere il modificatore `Public` alla classe o al modulo in cui è definito l'attributo.</span><span class="sxs-lookup"><span data-stu-id="66bd6-107">Add the `Public` modifier to the class or module where this attribute is defined.</span></span>  
+1. <span data-ttu-id="76c26-107">Aggiungere il modificatore `Public` alla classe o al modulo in cui è definito l'attributo.</span><span class="sxs-lookup"><span data-stu-id="76c26-107">Add the `Public` modifier to the class or module where this attribute is defined.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="66bd6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="66bd6-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="76c26-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="76c26-108">See also</span></span>
 
-- [<span data-ttu-id="66bd6-109">Public</span><span class="sxs-lookup"><span data-stu-id="66bd6-109">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
+- [<span data-ttu-id="76c26-109">Pubblica</span><span class="sxs-lookup"><span data-stu-id="76c26-109">Public</span></span>](../language-reference/modifiers/public.md)
