--- a/docs/visual-basic/misc/bc30021.md
+++ b/docs/visual-basic/misc/bc30021.md
@@ -1,5 +1,5 @@
 ---
-title: "' TypeOf... È ' operando sinistro deve avere un tipo riferimento, ma questo operando ha il tipo '<type>'"
+title: "' TypeOf... Is ' richiede che l'operando di sinistra abbia un tipo riferimento, ma questo operando ha il tipo ' <type> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30021
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30021
 ms.assetid: a6e76fc8-9c7f-4e55-8b68-e6e7b03a6737
-ms.openlocfilehash: 8998c48eb0168252b7710e5321bc0965ab865952
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 91e79ac8623964f3cdea8eb76a396a0792f710fb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584181"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366645"
 ---
-# <a name="typeofis-requires-its-left-operand-to-have-a-reference-type-but-this-operand-has-the-type-type"></a><span data-ttu-id="c334d-102">' TypeOf... È ' operando sinistro deve avere un tipo riferimento, ma questo operando ha il tipo '\<tipo >'</span><span class="sxs-lookup"><span data-stu-id="c334d-102">'TypeOf...Is' requires its left operand to have a reference type, but this operand has the type '\<type>'</span></span>
-<span data-ttu-id="c334d-103">L'espressione `TypeOf...Is` controlla la compatibilità dei tipi in fase di esecuzione di una variabile oggetto.</span><span class="sxs-lookup"><span data-stu-id="c334d-103">The `TypeOf...Is` expression checks an object variable's run-time type compatibility.</span></span> <span data-ttu-id="c334d-104">Questa compatibilità non è definita per i tipi valore.</span><span class="sxs-lookup"><span data-stu-id="c334d-104">This compatibility is not defined for value types.</span></span>  
+# <a name="typeofis-requires-its-left-operand-to-have-a-reference-type-but-this-operand-has-the-type-type"></a><span data-ttu-id="147a5-102">' TypeOf... Is ' richiede che l'operando di sinistra abbia un tipo riferimento, ma questo operando ha il tipo ' \<type> '</span><span class="sxs-lookup"><span data-stu-id="147a5-102">'TypeOf...Is' requires its left operand to have a reference type, but this operand has the type '\<type>'</span></span>
+<span data-ttu-id="147a5-103">L'espressione `TypeOf...Is` controlla la compatibilità dei tipi in fase di esecuzione di una variabile oggetto.</span><span class="sxs-lookup"><span data-stu-id="147a5-103">The `TypeOf...Is` expression checks an object variable's run-time type compatibility.</span></span> <span data-ttu-id="147a5-104">Questa compatibilità non è definita per i tipi valore.</span><span class="sxs-lookup"><span data-stu-id="147a5-104">This compatibility is not defined for value types.</span></span>  
   
- <span data-ttu-id="c334d-105">**ID errore:** BC30021</span><span class="sxs-lookup"><span data-stu-id="c334d-105">**Error ID:** BC30021</span></span>  
+ <span data-ttu-id="147a5-105">**ID errore:** BC30021</span><span class="sxs-lookup"><span data-stu-id="147a5-105">**Error ID:** BC30021</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c334d-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c334d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="147a5-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="147a5-106">To correct this error</span></span>  
   
-- <span data-ttu-id="c334d-107">Se `Option Strict` è `Off`, usare la funzione `TypeName` o `VarType` per ottenere informazioni sul tipo di dati della variabile.</span><span class="sxs-lookup"><span data-stu-id="c334d-107">If `Option Strict` is `Off`, use the `TypeName` or `VarType` function to obtain the variable's data type information.</span></span>  
+- <span data-ttu-id="147a5-107">Se `Option Strict` è `Off`, usare la funzione `TypeName` o `VarType` per ottenere informazioni sul tipo di dati della variabile.</span><span class="sxs-lookup"><span data-stu-id="147a5-107">If `Option Strict` is `Off`, use the `TypeName` or `VarType` function to obtain the variable's data type information.</span></span>  
   
-- <span data-ttu-id="c334d-108">Se `Option Strict` è `On`, la dichiarazione di variabile determina il tipo di dati della variabile.</span><span class="sxs-lookup"><span data-stu-id="c334d-108">If `Option Strict` is `On`, the variable declaration determines the variable's data type.</span></span>  
+- <span data-ttu-id="147a5-108">Se `Option Strict` è `On`, la dichiarazione di variabile determina il tipo di dati della variabile.</span><span class="sxs-lookup"><span data-stu-id="147a5-108">If `Option Strict` is `On`, the variable declaration determines the variable's data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c334d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c334d-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="147a5-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="147a5-109">See also</span></span>
 
-- [<span data-ttu-id="c334d-110">Operatori di confronto in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="c334d-110">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="147a5-110">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="147a5-110">Comparison Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
 
-- [<span data-ttu-id="c334d-111">Istruzione Option Strict</span><span class="sxs-lookup"><span data-stu-id="c334d-111">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [<span data-ttu-id="147a5-111">Option Strict Statement</span><span class="sxs-lookup"><span data-stu-id="147a5-111">Option Strict Statement</span></span>](../language-reference/statements/option-strict-statement.md)
