--- a/docs/visual-basic/misc/bc30058.md
+++ b/docs/visual-basic/misc/bc30058.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30058
 ms.assetid: 399b4659-f7df-4377-80be-43019f1e6206
-ms.openlocfilehash: b9470b568d21b8963fe22919a1a0b6f0918f5b65
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: aa37bbd4b78d8b5294b9cf3082c0d2573e9100e4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649872"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391482"
 ---
-# <a name="statements-and-labels-are-not-valid-between-select-case-and-first-case"></a><span data-ttu-id="79a10-102">Istruzioni ed etichette non sono valide tra 'Select Case' e la prima clausola 'Case'</span><span class="sxs-lookup"><span data-stu-id="79a10-102">Statements and labels are not valid between 'Select Case' and first 'Case'</span></span>
-<span data-ttu-id="79a10-103">Tra l'istruzione `Select` o `Select Case` di apertura e la relativa prima istruzione `Case` viene visualizzata un'istruzione che non è un commento.</span><span class="sxs-lookup"><span data-stu-id="79a10-103">A statement that is not a comment appears between the opening `Select` or `Select Case` statement and its first `Case` statement.</span></span>  
+# <a name="statements-and-labels-are-not-valid-between-select-case-and-first-case"></a><span data-ttu-id="0653c-102">Istruzioni ed etichette non sono valide tra 'Select Case' e la prima clausola 'Case'</span><span class="sxs-lookup"><span data-stu-id="0653c-102">Statements and labels are not valid between 'Select Case' and first 'Case'</span></span>
+<span data-ttu-id="0653c-103">Tra l'istruzione `Select` o `Select Case` di apertura e la relativa prima istruzione `Case` viene visualizzata un'istruzione che non è un commento.</span><span class="sxs-lookup"><span data-stu-id="0653c-103">A statement that is not a comment appears between the opening `Select` or `Select Case` statement and its first `Case` statement.</span></span>  
   
- <span data-ttu-id="79a10-104">**ID errore:** BC30058</span><span class="sxs-lookup"><span data-stu-id="79a10-104">**Error ID:** BC30058</span></span>  
+ <span data-ttu-id="0653c-104">**ID errore:** BC30058</span><span class="sxs-lookup"><span data-stu-id="0653c-104">**Error ID:** BC30058</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="79a10-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="79a10-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0653c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0653c-105">To correct this error</span></span>  
   
-- <span data-ttu-id="79a10-106">Se l'istruzione che interviene è un commento, anteporvi un delimitatore di commento (`'` o `REM`).</span><span class="sxs-lookup"><span data-stu-id="79a10-106">If the intervening statement is a comment, precede it with a comment delimiter (`'` or `REM`).</span></span> <span data-ttu-id="79a10-107">In caso contrario, spostare o eliminare l'istruzione.</span><span class="sxs-lookup"><span data-stu-id="79a10-107">Otherwise, move or delete the statement.</span></span>  
+- <span data-ttu-id="0653c-106">Se l'istruzione che interviene è un commento, anteporvi un delimitatore di commento (`'` o `REM`).</span><span class="sxs-lookup"><span data-stu-id="0653c-106">If the intervening statement is a comment, precede it with a comment delimiter (`'` or `REM`).</span></span> <span data-ttu-id="0653c-107">In caso contrario, spostare o eliminare l'istruzione.</span><span class="sxs-lookup"><span data-stu-id="0653c-107">Otherwise, move or delete the statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="79a10-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="79a10-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0653c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0653c-108">See also</span></span>
 
-- [<span data-ttu-id="79a10-109">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="79a10-109">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [<span data-ttu-id="0653c-109">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="0653c-109">Select...Case Statement</span></span>](../language-reference/statements/select-case-statement.md)
