--- a/docs/visual-basic/misc/bc30183.md
+++ b/docs/visual-basic/misc/bc30183.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30183
 ms.assetid: 37206d31-4247-414c-88d0-ebba1b00f10c
-ms.openlocfilehash: 9273daac97783334d761469162e3af13a544a04f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4c854c3d3d0757275fb8cf02893fea9a392bfcc1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627483"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403953"
 ---
-# <a name="keyword-is-not-valid-as-an-identifier"></a><span data-ttu-id="391e0-102">La parola chiave non è valida come identificatore</span><span class="sxs-lookup"><span data-stu-id="391e0-102">Keyword is not valid as an identifier</span></span>
-<span data-ttu-id="391e0-103">Una parola chiave viene visualizzata nel punto in cui è richiesto il nome di un elemento.</span><span class="sxs-lookup"><span data-stu-id="391e0-103">A keyword occurs where an element name is required.</span></span> <span data-ttu-id="391e0-104">Il contesto chiama una variabile o una routine.</span><span class="sxs-lookup"><span data-stu-id="391e0-104">The context calls for an element such as a variable or a procedure.</span></span>  
+# <a name="keyword-is-not-valid-as-an-identifier"></a><span data-ttu-id="ec9b6-102">La parola chiave non è valida come identificatore</span><span class="sxs-lookup"><span data-stu-id="ec9b6-102">Keyword is not valid as an identifier</span></span>
+<span data-ttu-id="ec9b6-103">Una parola chiave viene visualizzata nel punto in cui è richiesto il nome di un elemento.</span><span class="sxs-lookup"><span data-stu-id="ec9b6-103">A keyword occurs where an element name is required.</span></span> <span data-ttu-id="ec9b6-104">Il contesto chiama una variabile o una routine.</span><span class="sxs-lookup"><span data-stu-id="ec9b6-104">The context calls for an element such as a variable or a procedure.</span></span>  
   
- <span data-ttu-id="391e0-105">**ID errore:** BC30183</span><span class="sxs-lookup"><span data-stu-id="391e0-105">**Error ID:** BC30183</span></span>  
+ <span data-ttu-id="ec9b6-105">**ID errore:** BC30183</span><span class="sxs-lookup"><span data-stu-id="ec9b6-105">**Error ID:** BC30183</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="391e0-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="391e0-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ec9b6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ec9b6-106">To correct this error</span></span>  
   
-- <span data-ttu-id="391e0-107">Sostituire la parola chiave con un nome di elemento valido.</span><span class="sxs-lookup"><span data-stu-id="391e0-107">Replace the keyword with a valid element name.</span></span>  
+- <span data-ttu-id="ec9b6-107">Sostituire la parola chiave con un nome di elemento valido.</span><span class="sxs-lookup"><span data-stu-id="ec9b6-107">Replace the keyword with a valid element name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="391e0-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="391e0-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ec9b6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ec9b6-108">See also</span></span>
 
-- [<span data-ttu-id="391e0-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="391e0-109">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [<span data-ttu-id="ec9b6-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="ec9b6-109">Operators and Expressions</span></span>](../programming-guide/language-features/operators-and-expressions/index.md)
