--- a/docs/visual-basic/misc/bc30209.md
+++ b/docs/visual-basic/misc/bc30209.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30209
 ms.assetid: 69c2e32a-86aa-4075-a142-440605a7063a
-ms.openlocfilehash: b4334ec579ece4871a0904933c0f7c111b8e8cc4
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 40fbf28a774a5992828dbf8cd9704dd5325dbbbe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62028070"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84409205"
 ---
-# <a name="option-strict-on-requires-all-variable-declarations-to-have-an-as-clause"></a><span data-ttu-id="d7d33-102">Option Strict On richiede che tutte le dichiarazioni di variabili abbiano una clausola 'As'</span><span class="sxs-lookup"><span data-stu-id="d7d33-102">Option Strict On requires all variable declarations to have an 'As' clause</span></span>
-<span data-ttu-id="d7d33-103">Una dichiarazione contiene una variabile dichiarata senza una clausola `As` .</span><span class="sxs-lookup"><span data-stu-id="d7d33-103">A declaration contains a declared variable without an `As` clause.</span></span> <span data-ttu-id="d7d33-104">Quando `Option Strict` è `On`, ogni variabile, proprietà, argomento di routine e funzione deve essere dichiarata con una clausola `As` per specificare il tipo di dati, ad esempio `Dim MyNum As Short`.</span><span class="sxs-lookup"><span data-stu-id="d7d33-104">When `Option Strict` is `On`, every variable, property, procedure argument, and function return must be declared with an `As` clause to specify its data type; for example, `Dim MyNum As Short`.</span></span>  
+# <a name="option-strict-on-requires-all-variable-declarations-to-have-an-as-clause"></a><span data-ttu-id="d93e2-102">Option Strict On richiede che tutte le dichiarazioni di variabili abbiano una clausola 'As'</span><span class="sxs-lookup"><span data-stu-id="d93e2-102">Option Strict On requires all variable declarations to have an 'As' clause</span></span>
+<span data-ttu-id="d93e2-103">Una dichiarazione contiene una variabile dichiarata senza una clausola `As` .</span><span class="sxs-lookup"><span data-stu-id="d93e2-103">A declaration contains a declared variable without an `As` clause.</span></span> <span data-ttu-id="d93e2-104">Quando `Option Strict` è `On`, ogni variabile, proprietà, argomento di routine e funzione deve essere dichiarata con una clausola `As` per specificare il tipo di dati, ad esempio `Dim MyNum As Short`.</span><span class="sxs-lookup"><span data-stu-id="d93e2-104">When `Option Strict` is `On`, every variable, property, procedure argument, and function return must be declared with an `As` clause to specify its data type; for example, `Dim MyNum As Short`.</span></span>  
   
- <span data-ttu-id="d7d33-105">**ID errore:** BC30209</span><span class="sxs-lookup"><span data-stu-id="d7d33-105">**Error ID:** BC30209</span></span>  
+ <span data-ttu-id="d93e2-105">**ID errore:** BC30209</span><span class="sxs-lookup"><span data-stu-id="d93e2-105">**Error ID:** BC30209</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d7d33-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d7d33-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d93e2-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d93e2-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="d7d33-107">Verificare che la parola chiave `As` non sia digitata in modo errato.</span><span class="sxs-lookup"><span data-stu-id="d7d33-107">Check to see if the `As` keyword is misspelled.</span></span>  
+1. <span data-ttu-id="d93e2-107">Verificare che la parola chiave `As` non sia digitata in modo errato.</span><span class="sxs-lookup"><span data-stu-id="d93e2-107">Check to see if the `As` keyword is misspelled.</span></span>  
   
-2. <span data-ttu-id="d7d33-108">Fornire una clausola `As` per la variabile dichiarata oppure usare `Option Strict Off`.</span><span class="sxs-lookup"><span data-stu-id="d7d33-108">Supply an `As` clause for the declared variable, or turn `Option Strict Off`.</span></span>  
+2. <span data-ttu-id="d93e2-108">Fornire una clausola `As` per la variabile dichiarata oppure usare `Option Strict Off`.</span><span class="sxs-lookup"><span data-stu-id="d93e2-108">Supply an `As` clause for the declared variable, or turn `Option Strict Off`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d7d33-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d7d33-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d93e2-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d93e2-109">See also</span></span>
 
-- [<span data-ttu-id="d7d33-110">Istruzione Option Strict</span><span class="sxs-lookup"><span data-stu-id="d7d33-110">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
-- [<span data-ttu-id="d7d33-111">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="d7d33-111">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+- [<span data-ttu-id="d93e2-110">Option Strict Statement</span><span class="sxs-lookup"><span data-stu-id="d93e2-110">Option Strict Statement</span></span>](../language-reference/statements/option-strict-statement.md)
+- [<span data-ttu-id="d93e2-111">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="d93e2-111">Variable Declaration</span></span>](../programming-guide/language-features/variables/variable-declaration.md)
