--- a/docs/visual-basic/misc/bc30280.md
+++ b/docs/visual-basic/misc/bc30280.md
@@ -1,5 +1,5 @@
 ---
-title: Enum '<enumname>' deve contenere almeno un membro
+title: L'enumerazione '<enumname>' deve contenere almeno un membro
 ms.date: 07/20/2015
 f1_keywords:
 - bc30280
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30280
 ms.assetid: eece372a-f87f-4270-ba66-5ff68f0dfb5e
-ms.openlocfilehash: 31e873e5b40ecce875975e8da5bf347b9830193d
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: dd45f7ac20b52fcf1709d68a4fce9a1a98cc7671
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61794823"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390767"
 ---
-# <a name="enum-enumname-must-contain-at-least-one-member"></a><span data-ttu-id="01907-102">Enum '\<nomeenumerazione >' deve contenere almeno un membro</span><span class="sxs-lookup"><span data-stu-id="01907-102">Enum '\<enumname>' must contain at least one member</span></span>
-<span data-ttu-id="01907-103">Si verifica un'enumerazione vuota.</span><span class="sxs-lookup"><span data-stu-id="01907-103">An empty enumeration occurs.</span></span> <span data-ttu-id="01907-104">Almeno un membro deve essere dichiarato tra le istruzioni `Enum` e `End Enum` .</span><span class="sxs-lookup"><span data-stu-id="01907-104">At least one member must be declared between the `Enum` statement and the `End Enum` statement.</span></span>  
+# <a name="enum-enumname-must-contain-at-least-one-member"></a><span data-ttu-id="79769-102">L'enumerazione '\<enumname>' deve contenere almeno un membro</span><span class="sxs-lookup"><span data-stu-id="79769-102">Enum '\<enumname>' must contain at least one member</span></span>
+<span data-ttu-id="79769-103">Si verifica un'enumerazione vuota.</span><span class="sxs-lookup"><span data-stu-id="79769-103">An empty enumeration occurs.</span></span> <span data-ttu-id="79769-104">Almeno un membro deve essere dichiarato tra le istruzioni `Enum` e `End Enum` .</span><span class="sxs-lookup"><span data-stu-id="79769-104">At least one member must be declared between the `Enum` statement and the `End Enum` statement.</span></span>  
   
- <span data-ttu-id="01907-105">**ID errore:** BC30280</span><span class="sxs-lookup"><span data-stu-id="01907-105">**Error ID:** BC30280</span></span>  
+ <span data-ttu-id="79769-105">**ID errore:** BC30280</span><span class="sxs-lookup"><span data-stu-id="79769-105">**Error ID:** BC30280</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="01907-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="01907-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="79769-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="79769-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="01907-107">Aggiungere una dichiarazione di membro all'enumerazione.</span><span class="sxs-lookup"><span data-stu-id="01907-107">Add a member declaration to the enumeration.</span></span>  
+1. <span data-ttu-id="79769-107">Aggiungere una dichiarazione di membro all'enumerazione.</span><span class="sxs-lookup"><span data-stu-id="79769-107">Add a member declaration to the enumeration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="01907-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="01907-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="79769-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="79769-108">See also</span></span>
 
-- [<span data-ttu-id="01907-109">Istruzione Enum</span><span class="sxs-lookup"><span data-stu-id="01907-109">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
+- [<span data-ttu-id="79769-109">Istruzione Enum</span><span class="sxs-lookup"><span data-stu-id="79769-109">Enum Statement</span></span>](../language-reference/statements/enum-statement.md)
