--- a/docs/visual-basic/misc/bc30287.md
+++ b/docs/visual-basic/misc/bc30287.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30287
 ms.assetid: 7d7b4934-b521-4ed3-b054-aeb71f8daacf
-ms.openlocfilehash: 44571845215c45749532d66c3e4c64d355741609
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e3cabc779cf24332ab7cdfdd45005ff97f903a6d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61794797"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390669"
 ---
-# <a name="-expected"></a><span data-ttu-id="a897c-102">È previsto il punto ('.')</span><span class="sxs-lookup"><span data-stu-id="a897c-102">'.' expected</span></span>
-<span data-ttu-id="a897c-103">Il codice ha una clausola `Handles` che contiene un punto esclamativo (`!`).</span><span class="sxs-lookup"><span data-stu-id="a897c-103">The code has a `Handles` clause that contains an exclamation point (`!`).</span></span>  
+# <a name="-expected"></a><span data-ttu-id="8ed42-102">È previsto il punto ('.')</span><span class="sxs-lookup"><span data-stu-id="8ed42-102">'.' expected</span></span>
+<span data-ttu-id="8ed42-103">Il codice ha una clausola `Handles` che contiene un punto esclamativo (`!`).</span><span class="sxs-lookup"><span data-stu-id="8ed42-103">The code has a `Handles` clause that contains an exclamation point (`!`).</span></span>  
   
- <span data-ttu-id="a897c-104">**ID errore:** BC30287</span><span class="sxs-lookup"><span data-stu-id="a897c-104">**Error ID:** BC30287</span></span>  
+ <span data-ttu-id="8ed42-104">**ID errore:** BC30287</span><span class="sxs-lookup"><span data-stu-id="8ed42-104">**Error ID:** BC30287</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a897c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a897c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8ed42-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8ed42-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="a897c-106">Se la clausola `Handles` fa riferimento a un evento all'interno di un oggetto, usare un punto (`.`) per separare l'oggetto dall'evento.</span><span class="sxs-lookup"><span data-stu-id="a897c-106">If the `Handles` clause refers to an event within an object, use a period (`.`) to separate the object from the event.</span></span>  
+1. <span data-ttu-id="8ed42-106">Se la clausola `Handles` fa riferimento a un evento all'interno di un oggetto, usare un punto (`.`) per separare l'oggetto dall'evento.</span><span class="sxs-lookup"><span data-stu-id="8ed42-106">If the `Handles` clause refers to an event within an object, use a period (`.`) to separate the object from the event.</span></span>  
   
-     <span data-ttu-id="a897c-107">Questo esempio gestisce l'evento `Click` dell'oggetto `Button1` .</span><span class="sxs-lookup"><span data-stu-id="a897c-107">This example handles the `Click` event from the `Button1` object.</span></span>  
+     <span data-ttu-id="8ed42-107">Questo esempio gestisce l'evento `Click` dell'oggetto `Button1` .</span><span class="sxs-lookup"><span data-stu-id="8ed42-107">This example handles the `Click` event from the `Button1` object.</span></span>  
   
      [!code-vb[VbVbalrEventError#21](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrEventError/VB/VbVbalrEventError.vb#21)]  
   
-## <a name="see-also"></a><span data-ttu-id="a897c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a897c-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8ed42-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8ed42-108">See also</span></span>
 
-- [<span data-ttu-id="a897c-109">Handles</span><span class="sxs-lookup"><span data-stu-id="a897c-109">Handles</span></span>](../../visual-basic/language-reference/statements/handles-clause.md)
+- [<span data-ttu-id="8ed42-109">Selettori</span><span class="sxs-lookup"><span data-stu-id="8ed42-109">Handles</span></span>](../language-reference/statements/handles-clause.md)
