--- a/docs/visual-basic/misc/bc30311.md
+++ b/docs/visual-basic/misc/bc30311.md
@@ -7,34 +7,34 @@ f1_keywords:
 helpviewer_keywords:
 - BC30311
 ms.assetid: e3a513d4-2a1e-46d6-b592-b2e756b89d7d
-ms.openlocfilehash: 989de1d8a86215c0ef9da1c1a4c706085f51e268
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 18191fed9270c612c184ea4552822c94404e9731
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68513086"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406145"
 ---
-# <a name="value-of-type-type1-cannot-be-converted-to-type2"></a><span data-ttu-id="7e30e-102">Il valore di tipo\<' tipo1 >' non può essere convertito\<in ' tipo2 >'</span><span class="sxs-lookup"><span data-stu-id="7e30e-102">Value of type '\<type1>' cannot be converted to '\<type2>'</span></span>
+# <a name="value-of-type-type1-cannot-be-converted-to-type2"></a><span data-ttu-id="66116-102">Impossibile convertire il valore di tipo '\<type1>' in '\<type2>'</span><span class="sxs-lookup"><span data-stu-id="66116-102">Value of type '\<type1>' cannot be converted to '\<type2>'</span></span>
 
-<span data-ttu-id="7e30e-103">Un'istruzione prova a convertire un tipo di dati in un altro usando una procedura non definita.</span><span class="sxs-lookup"><span data-stu-id="7e30e-103">A statement attempts to convert one data type to another in a way that is not defined.</span></span> <span data-ttu-id="7e30e-104">Alcune cause possibili di questo errore sono:</span><span class="sxs-lookup"><span data-stu-id="7e30e-104">Possible causes of this error include the following:</span></span>
+<span data-ttu-id="66116-103">Un'istruzione prova a convertire un tipo di dati in un altro usando una procedura non definita.</span><span class="sxs-lookup"><span data-stu-id="66116-103">A statement attempts to convert one data type to another in a way that is not defined.</span></span> <span data-ttu-id="66116-104">Alcune cause possibili di questo errore sono:</span><span class="sxs-lookup"><span data-stu-id="66116-104">Possible causes of this error include the following:</span></span>
 
-- <span data-ttu-id="7e30e-105">Una conversione specifica due tipi di dati tra cui non viene eseguita alcuna conversione.</span><span class="sxs-lookup"><span data-stu-id="7e30e-105">A conversion specifies two data types between which no conversion exists.</span></span> <span data-ttu-id="7e30e-106">Un esempio può essere una conversione da un valore `Boolean` al tipo `Date` .</span><span class="sxs-lookup"><span data-stu-id="7e30e-106">An example of this is a conversion from a `Boolean` value to the `Date` type.</span></span>
+- <span data-ttu-id="66116-105">Una conversione specifica due tipi di dati tra cui non viene eseguita alcuna conversione.</span><span class="sxs-lookup"><span data-stu-id="66116-105">A conversion specifies two data types between which no conversion exists.</span></span> <span data-ttu-id="66116-106">Un esempio può essere una conversione da un valore `Boolean` al tipo `Date` .</span><span class="sxs-lookup"><span data-stu-id="66116-106">An example of this is a conversion from a `Boolean` value to the `Date` type.</span></span>
 
-- <span data-ttu-id="7e30e-107">L'inizializzazione di una matrice non comprende parentesi graffe (`{}`) dopo una clausola `New` .</span><span class="sxs-lookup"><span data-stu-id="7e30e-107">An initialization of an array does not include braces (`{}`) following a `New` clause.</span></span> <span data-ttu-id="7e30e-108">In questo caso, \<tipo2 > è nel formato "matrice unidimensionale di \<tipo >".</span><span class="sxs-lookup"><span data-stu-id="7e30e-108">In this case, \<type2> is of the form '1-dimensional array of \<type>'.</span></span>
+- <span data-ttu-id="66116-107">L'inizializzazione di una matrice non comprende parentesi graffe (`{}`) dopo una clausola `New` .</span><span class="sxs-lookup"><span data-stu-id="66116-107">An initialization of an array does not include braces (`{}`) following a `New` clause.</span></span> <span data-ttu-id="66116-108">In questo caso \<type2> il formato è "matrice unidimensionale di \<type> ".</span><span class="sxs-lookup"><span data-stu-id="66116-108">In this case, \<type2> is of the form '1-dimensional array of \<type>'.</span></span>
 
-<span data-ttu-id="7e30e-109">**ID errore:** BC30311</span><span class="sxs-lookup"><span data-stu-id="7e30e-109">**Error ID:** BC30311</span></span>
+<span data-ttu-id="66116-109">**ID errore:** BC30311</span><span class="sxs-lookup"><span data-stu-id="66116-109">**Error ID:** BC30311</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="7e30e-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7e30e-110">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="66116-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="66116-110">To correct this error</span></span>
 
-- <span data-ttu-id="7e30e-111">Accertarsi che l'espressione possa essere convertita nel tipo di dati di destinazione.</span><span class="sxs-lookup"><span data-stu-id="7e30e-111">Make sure the expression can be converted to the destination data type.</span></span>
+- <span data-ttu-id="66116-111">Accertarsi che l'espressione possa essere convertita nel tipo di dati di destinazione.</span><span class="sxs-lookup"><span data-stu-id="66116-111">Make sure the expression can be converted to the destination data type.</span></span>
 
-- <span data-ttu-id="7e30e-112">Se \<tipo2 > è una matrice, assicurarsi che la `New` clausola includa sia le parentesi sia le parentesi graffe che seguono il nome del tipo.</span><span class="sxs-lookup"><span data-stu-id="7e30e-112">If \<type2> is an array, make sure the `New` clause contains both parentheses and braces following the type name.</span></span> <span data-ttu-id="7e30e-113">Il codice seguente illustra la corretta inizializzazione di una matrice.</span><span class="sxs-lookup"><span data-stu-id="7e30e-113">The following code illustrates correct initialization of an array.</span></span>
+- <span data-ttu-id="66116-112">Se \<type2> è una matrice, assicurarsi che la `New` clausola includa sia le parentesi sia le parentesi graffe che seguono il nome del tipo.</span><span class="sxs-lookup"><span data-stu-id="66116-112">If \<type2> is an array, make sure the `New` clause contains both parentheses and braces following the type name.</span></span> <span data-ttu-id="66116-113">Il codice seguente illustra la corretta inizializzazione di una matrice.</span><span class="sxs-lookup"><span data-stu-id="66116-113">The following code illustrates correct initialization of an array.</span></span>
 
   ```vb
   Dim anIntArray As Integer() = New Integer() {}
   ```
 
-## <a name="see-also"></a><span data-ttu-id="7e30e-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7e30e-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="66116-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="66116-114">See also</span></span>
 
-- [<span data-ttu-id="7e30e-115">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="7e30e-115">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
-- [<span data-ttu-id="7e30e-116">Procedura: Inizializzare una variabile di matrice in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="7e30e-116">How to: Initialize an Array Variable in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
+- [<span data-ttu-id="66116-115">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="66116-115">Type Conversions in Visual Basic</span></span>](../programming-guide/language-features/data-types/type-conversions.md)
+- [<span data-ttu-id="66116-116">Procedura: Inizializzare una variabile di matrice in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="66116-116">How to: Initialize an Array Variable in Visual Basic</span></span>](../programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
