--- a/docs/visual-basic/misc/bc30357.md
+++ b/docs/visual-basic/misc/bc30357.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30357
 ms.assetid: 730481dc-cbf8-430f-80d0-03b1cdcc0c79
-ms.openlocfilehash: 2aecdd7abb645a29abdf0e6bf355c3007f0e0546
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e00a7562cb87154c14e2ce0dd4d3036f462e714e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663770"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414116"
 ---
-# <a name="inherits-statements-must-precede-all-declarations-in-an-interface"></a><span data-ttu-id="f1ecf-102">Le istruzioni 'Inherits' devono precedere tutte le dichiarazioni in un'interfaccia</span><span class="sxs-lookup"><span data-stu-id="f1ecf-102">'Inherits' statements must precede all declarations in an interface</span></span>
-<span data-ttu-id="f1ecf-103">Un'istruzione `Inherits` deve essere la prima riga non vuota non di commento in una definizione di classe.</span><span class="sxs-lookup"><span data-stu-id="f1ecf-103">An `Inherits` statement must be the first non-blank, non-comment line in a class definition.</span></span>  
+# <a name="inherits-statements-must-precede-all-declarations-in-an-interface"></a><span data-ttu-id="6dbcc-102">Le istruzioni 'Inherits' devono precedere tutte le dichiarazioni in un'interfaccia</span><span class="sxs-lookup"><span data-stu-id="6dbcc-102">'Inherits' statements must precede all declarations in an interface</span></span>
+<span data-ttu-id="6dbcc-103">Un'istruzione `Inherits` deve essere la prima riga non vuota non di commento in una definizione di classe.</span><span class="sxs-lookup"><span data-stu-id="6dbcc-103">An `Inherits` statement must be the first non-blank, non-comment line in a class definition.</span></span>  
   
- <span data-ttu-id="f1ecf-104">**ID errore:** BC30357</span><span class="sxs-lookup"><span data-stu-id="f1ecf-104">**Error ID:** BC30357</span></span>  
+ <span data-ttu-id="6dbcc-104">**ID errore:** BC30357</span><span class="sxs-lookup"><span data-stu-id="6dbcc-104">**Error ID:** BC30357</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f1ecf-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f1ecf-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6dbcc-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6dbcc-105">To correct this error</span></span>  
   
-- <span data-ttu-id="f1ecf-106">Spostare l'istruzione `Inherits` in modo che preceda tutte le dichiarazioni.</span><span class="sxs-lookup"><span data-stu-id="f1ecf-106">Move your `Inherits` statement so that it precedes all declarations.</span></span>  
+- <span data-ttu-id="6dbcc-106">Spostare l'istruzione `Inherits` in modo che preceda tutte le dichiarazioni.</span><span class="sxs-lookup"><span data-stu-id="6dbcc-106">Move your `Inherits` statement so that it precedes all declarations.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f1ecf-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f1ecf-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6dbcc-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6dbcc-107">See also</span></span>
 
-- [<span data-ttu-id="f1ecf-108">Istruzione Inherits</span><span class="sxs-lookup"><span data-stu-id="f1ecf-108">Inherits Statement</span></span>](../../visual-basic/language-reference/statements/inherits-statement.md)
+- [<span data-ttu-id="6dbcc-108">Inherits Statement</span><span class="sxs-lookup"><span data-stu-id="6dbcc-108">Inherits Statement</span></span>](../language-reference/statements/inherits-statement.md)
