--- a/docs/visual-basic/misc/bc30367.md
+++ b/docs/visual-basic/misc/bc30367.md
@@ -1,5 +1,5 @@
 ---
-title: Classe<classname>' non può essere indicizzata perché non contiene proprietà predefinite
+title: Impossibile indicizzare la classe '<classname>' perché non contiene proprietà predefinite
 ms.date: 07/20/2015
 f1_keywords:
 - bc30367
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30367
 ms.assetid: bcccde7e-4433-459f-a060-7236902fc05e
-ms.openlocfilehash: 859f86e58cc357fd9ae16c0064f4c2a89c983354
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b410408b1365fc51bdaa329f49fd2c1cc84186d6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663140"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403849"
 ---
-# <a name="class-classname-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="3c58c-102">Classe\<NomeClasse >' non può essere indicizzata perché non contiene proprietà predefinite</span><span class="sxs-lookup"><span data-stu-id="3c58c-102">Class '\<classname>' cannot be indexed because it has no default property</span></span>
-<span data-ttu-id="3c58c-103">Non è stato possibile specificare una proprietà predefinita per una classe.</span><span class="sxs-lookup"><span data-stu-id="3c58c-103">You have failed to supply a default property for a class.</span></span>  
+# <a name="class-classname-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="bbd4c-102">Impossibile indicizzare la classe '\<classname>' perché non contiene proprietà predefinite</span><span class="sxs-lookup"><span data-stu-id="bbd4c-102">Class '\<classname>' cannot be indexed because it has no default property</span></span>
+<span data-ttu-id="bbd4c-103">Non è stato possibile specificare una proprietà predefinita per una classe.</span><span class="sxs-lookup"><span data-stu-id="bbd4c-103">You have failed to supply a default property for a class.</span></span>  
   
- <span data-ttu-id="3c58c-104">**ID errore:** BC30367</span><span class="sxs-lookup"><span data-stu-id="3c58c-104">**Error ID:** BC30367</span></span>  
+ <span data-ttu-id="bbd4c-104">**ID errore:** BC30367</span><span class="sxs-lookup"><span data-stu-id="bbd4c-104">**Error ID:** BC30367</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3c58c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3c58c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="bbd4c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bbd4c-105">To correct this error</span></span>  
   
-- <span data-ttu-id="3c58c-106">Specificare una proprietà come proprietà predefinita iniziando la relativa dichiarazione con la parola chiave `Default` .</span><span class="sxs-lookup"><span data-stu-id="3c58c-106">Specify a property as the default property by starting its declaration with the `Default` keyword.</span></span>  
+- <span data-ttu-id="bbd4c-106">Specificare una proprietà come proprietà predefinita iniziando la relativa dichiarazione con la parola chiave `Default` .</span><span class="sxs-lookup"><span data-stu-id="bbd4c-106">Specify a property as the default property by starting its declaration with the `Default` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3c58c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3c58c-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="bbd4c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bbd4c-107">See also</span></span>
 
-- [<span data-ttu-id="3c58c-108">Default</span><span class="sxs-lookup"><span data-stu-id="3c58c-108">Default</span></span>](../../visual-basic/language-reference/modifiers/default.md)
+- [<span data-ttu-id="bbd4c-108">Default</span><span class="sxs-lookup"><span data-stu-id="bbd4c-108">Default</span></span>](../language-reference/modifiers/default.md)
