--- a/docs/visual-basic/misc/bc30433.md
+++ b/docs/visual-basic/misc/bc30433.md
@@ -1,5 +1,5 @@
 ---
-title: I metodi in un modulo non possono essere dichiarati '<specifier>'
+title: I metodi in un modulo non possono essere dichiarati ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30433
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30433
 ms.assetid: e9fa204c-a40f-439e-95bb-048a89a19159
-ms.openlocfilehash: 702330f75c3c20311d0b45f8ffcb57a59f76595b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0789b4d8903c59b681ea6db7f6af904d11de523f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589678"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84397012"
 ---
-# <a name="methods-in-a-module-cannot-be-declared-specifier"></a><span data-ttu-id="77e61-102">I metodi in un modulo non possono essere dichiarati '\<identificatore >'</span><span class="sxs-lookup"><span data-stu-id="77e61-102">Methods in a Module cannot be declared '\<specifier>'</span></span>
-<span data-ttu-id="77e61-103">È stato usato un identificatore non valido in un metodo all'interno di un'istruzione `Module` .</span><span class="sxs-lookup"><span data-stu-id="77e61-103">You have used a specifier that is not valid on a method within a `Module` statement.</span></span> <span data-ttu-id="77e61-104">Non è possibile creare istanze dei moduli, i moduli non supportano l'ereditarietà e non possono implementare le interfacce.</span><span class="sxs-lookup"><span data-stu-id="77e61-104">Modules can never be instantiated, do not support inheritance, and cannot implement interfaces.</span></span>  
+# <a name="methods-in-a-module-cannot-be-declared-specifier"></a><span data-ttu-id="66eb2-102">I metodi in un modulo non possono essere dichiarati ' \<specifier> '</span><span class="sxs-lookup"><span data-stu-id="66eb2-102">Methods in a Module cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="66eb2-103">È stato usato un identificatore non valido in un metodo all'interno di un'istruzione `Module` .</span><span class="sxs-lookup"><span data-stu-id="66eb2-103">You have used a specifier that is not valid on a method within a `Module` statement.</span></span> <span data-ttu-id="66eb2-104">Non è possibile creare istanze dei moduli, i moduli non supportano l'ereditarietà e non possono implementare le interfacce.</span><span class="sxs-lookup"><span data-stu-id="66eb2-104">Modules can never be instantiated, do not support inheritance, and cannot implement interfaces.</span></span>  
   
- <span data-ttu-id="77e61-105">**ID errore:** BC30433</span><span class="sxs-lookup"><span data-stu-id="77e61-105">**Error ID:** BC30433</span></span>  
+ <span data-ttu-id="66eb2-105">**ID errore:** BC30433</span><span class="sxs-lookup"><span data-stu-id="66eb2-105">**Error ID:** BC30433</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="77e61-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="77e61-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="66eb2-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="66eb2-106">To correct this error</span></span>  
   
-- <span data-ttu-id="77e61-107">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="77e61-107">Remove the specifier.</span></span>  
+- <span data-ttu-id="66eb2-107">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="66eb2-107">Remove the specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="77e61-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="77e61-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="66eb2-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="66eb2-108">See also</span></span>
 
-- [<span data-ttu-id="77e61-109">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="77e61-109">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+- [<span data-ttu-id="66eb2-109">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="66eb2-109">Module Statement</span></span>](../language-reference/statements/module-statement.md)
