--- a/docs/visual-basic/misc/bc30532.md
+++ b/docs/visual-basic/misc/bc30532.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30532
 ms.assetid: 8171ce21-e4f6-4e75-b7e8-32baf78a40eb
-ms.openlocfilehash: 61d833cee79be92ac098cb503f8bb7a755b7e1fe
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 53dff360e2f368d8101936b1bfc9fd1a2121c0d1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625207"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386458"
 ---
-# <a name="conversion-from-date-to-double-requires-calling-the-datetooadate-method"></a><span data-ttu-id="0da4e-102">Per la conversione da 'Double' a 'Date' è necessario chiamare il metodo 'Date.ToOADate'</span><span class="sxs-lookup"><span data-stu-id="0da4e-102">Conversion from 'Date' to 'Double' requires calling the 'Date.ToOADate' method</span></span>
-<span data-ttu-id="0da4e-103">Si è provato a eseguire il cast di un valore `Date` a un valore `Double` , operazione che non può essere eseguita senza usare il metodo <xref:System.DateTime.ToOADate%2A?displayProperty=nameWithType> .</span><span class="sxs-lookup"><span data-stu-id="0da4e-103">You have attempted to cast a `Date` value to a `Double` value, which cannot be done without using the <xref:System.DateTime.ToOADate%2A?displayProperty=nameWithType> method.</span></span>  
+# <a name="conversion-from-date-to-double-requires-calling-the-datetooadate-method"></a><span data-ttu-id="dce85-102">Per la conversione da 'Double' a 'Date' è necessario chiamare il metodo 'Date.ToOADate'</span><span class="sxs-lookup"><span data-stu-id="dce85-102">Conversion from 'Date' to 'Double' requires calling the 'Date.ToOADate' method</span></span>
+<span data-ttu-id="dce85-103">Si è provato a eseguire il cast di un valore `Date` a un valore `Double` , operazione che non può essere eseguita senza usare il metodo <xref:System.DateTime.ToOADate%2A?displayProperty=nameWithType> .</span><span class="sxs-lookup"><span data-stu-id="dce85-103">You have attempted to cast a `Date` value to a `Double` value, which cannot be done without using the <xref:System.DateTime.ToOADate%2A?displayProperty=nameWithType> method.</span></span>  
   
- <span data-ttu-id="0da4e-104">**ID errore:** BC30532</span><span class="sxs-lookup"><span data-stu-id="0da4e-104">**Error ID:** BC30532</span></span>  
+ <span data-ttu-id="dce85-104">**ID errore:** BC30532</span><span class="sxs-lookup"><span data-stu-id="dce85-104">**Error ID:** BC30532</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0da4e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0da4e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dce85-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dce85-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0da4e-106">Usare il metodo <xref:System.DateTime.ToOADate%2A?displayProperty=nameWithType> per convertire il valore.</span><span class="sxs-lookup"><span data-stu-id="0da4e-106">Use the <xref:System.DateTime.ToOADate%2A?displayProperty=nameWithType> method to convert the value.</span></span>  
+- <span data-ttu-id="dce85-106">Usare il metodo <xref:System.DateTime.ToOADate%2A?displayProperty=nameWithType> per convertire il valore.</span><span class="sxs-lookup"><span data-stu-id="dce85-106">Use the <xref:System.DateTime.ToOADate%2A?displayProperty=nameWithType> method to convert the value.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0da4e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0da4e-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dce85-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dce85-107">See also</span></span>
 
-- [<span data-ttu-id="0da4e-108">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0da4e-108">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [<span data-ttu-id="dce85-108">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="dce85-108">Type Conversions in Visual Basic</span></span>](../programming-guide/language-features/data-types/type-conversions.md)
