--- a/docs/visual-basic/misc/bc30672.md
+++ b/docs/visual-basic/misc/bc30672.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC30672
 ms.assetid: 4b525e8d-bde5-4408-8c10-7605ca039f0e
-ms.openlocfilehash: 3881170b13f95b9e8a379f3d437ddd7ab9c446a7
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 071c2815c6cbb9937b82eecb201547dda1d997f6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512952"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414868"
 ---
-# <a name="explicit-initialization-is-not-permitted-for-arrays-declared-with-explicit-bounds"></a><span data-ttu-id="12067-102">Inizializzazione esplicita non consentita per matrici dichiarate con limiti espliciti</span><span class="sxs-lookup"><span data-stu-id="12067-102">Explicit initialization is not permitted for arrays declared with explicit bounds</span></span>
+# <a name="explicit-initialization-is-not-permitted-for-arrays-declared-with-explicit-bounds"></a><span data-ttu-id="925c9-102">Inizializzazione esplicita non consentita per matrici dichiarate con limiti espliciti</span><span class="sxs-lookup"><span data-stu-id="925c9-102">Explicit initialization is not permitted for arrays declared with explicit bounds</span></span>
 
-<span data-ttu-id="12067-103">Non è possibile inizializzare le matrici se vengono dichiarate con dimensioni specifiche.</span><span class="sxs-lookup"><span data-stu-id="12067-103">Arrays cannot be initialized if they are declared to be a specific size.</span></span>
+<span data-ttu-id="925c9-103">Non è possibile inizializzare le matrici se vengono dichiarate con dimensioni specifiche.</span><span class="sxs-lookup"><span data-stu-id="925c9-103">Arrays cannot be initialized if they are declared to be a specific size.</span></span>
 
-<span data-ttu-id="12067-104">**ID errore:** BC30672</span><span class="sxs-lookup"><span data-stu-id="12067-104">**Error ID:** BC30672</span></span>
+<span data-ttu-id="925c9-104">**ID errore:** BC30672</span><span class="sxs-lookup"><span data-stu-id="925c9-104">**Error ID:** BC30672</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="12067-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="12067-105">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="925c9-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="925c9-105">To correct this error</span></span>
 
-- <span data-ttu-id="12067-106">Dichiarare la matrice e quindi inizializzarla separatamente.</span><span class="sxs-lookup"><span data-stu-id="12067-106">Declare the array, and then initialize it separately.</span></span>
+- <span data-ttu-id="925c9-106">Dichiarare la matrice e quindi inizializzarla separatamente.</span><span class="sxs-lookup"><span data-stu-id="925c9-106">Declare the array, and then initialize it separately.</span></span>
 
-- <span data-ttu-id="12067-107">Dichiarare e inizializzare come matrice dinamica e usare `ReDim` se necessario, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="12067-107">Declare and initialize as a dynamic array, and use `ReDim` if necessary; for example:</span></span>
+- <span data-ttu-id="925c9-107">Dichiarare e inizializzare come matrice dinamica e usare `ReDim` se necessario, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="925c9-107">Declare and initialize as a dynamic array, and use `ReDim` if necessary; for example:</span></span>
 
   ```vb
   Dim A() As Integer = {0, 1, 2, 3}
   ReDim Preserve A(3)
   ```
 
-## <a name="see-also"></a><span data-ttu-id="12067-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="12067-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="925c9-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="925c9-108">See also</span></span>
 
-- [<span data-ttu-id="12067-109">Matrici</span><span class="sxs-lookup"><span data-stu-id="12067-109">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="925c9-109">Matrici</span><span class="sxs-lookup"><span data-stu-id="925c9-109">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
