--- a/docs/visual-basic/misc/bc31071.md
+++ b/docs/visual-basic/misc/bc31071.md
@@ -1,5 +1,5 @@
 ---
-title: Struttura in un'interfaccia non può essere dichiarata '<specifier>'
+title: La struttura in un'interfaccia non può essere dichiarata come ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31071
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31071
 ms.assetid: 3ab95933-23d8-4d95-80be-552570dd69cb
-ms.openlocfilehash: 5150b5e3bdf1096cfd092c3f5dff49ecd8917555
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: fc9dde17fcf5cb505c96df884dec94d69cf451a7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64619295"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405768"
 ---
-# <a name="structure-in-an-interface-cannot-be-declared-specifier"></a><span data-ttu-id="df3de-102">Struttura in un'interfaccia non può essere dichiarata '\<identificatore >'</span><span class="sxs-lookup"><span data-stu-id="df3de-102">Structure in an interface cannot be declared '\<specifier>'</span></span>
-<span data-ttu-id="df3de-103">Il modificatore specificato con la struttura dichiarata nell'interfaccia non è valido.</span><span class="sxs-lookup"><span data-stu-id="df3de-103">An invalid modifier was specified with a structure declared in an interface.</span></span>  
+# <a name="structure-in-an-interface-cannot-be-declared-specifier"></a><span data-ttu-id="aa1eb-102">La struttura in un'interfaccia non può essere dichiarata come ' \<specifier> '</span><span class="sxs-lookup"><span data-stu-id="aa1eb-102">Structure in an interface cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="aa1eb-103">Il modificatore specificato con la struttura dichiarata nell'interfaccia non è valido.</span><span class="sxs-lookup"><span data-stu-id="aa1eb-103">An invalid modifier was specified with a structure declared in an interface.</span></span>  
   
- <span data-ttu-id="df3de-104">**ID errore:** BC31071</span><span class="sxs-lookup"><span data-stu-id="df3de-104">**Error ID:** BC31071</span></span>  
+ <span data-ttu-id="aa1eb-104">**ID errore:** BC31071</span><span class="sxs-lookup"><span data-stu-id="aa1eb-104">**Error ID:** BC31071</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="df3de-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="df3de-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="aa1eb-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="aa1eb-105">To correct this error</span></span>  
   
-- <span data-ttu-id="df3de-106">Rimuovere i modificatori come `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`o `Overridable`.</span><span class="sxs-lookup"><span data-stu-id="df3de-106">Remove modifiers such as `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`, or `Overridable`.</span></span>  
+- <span data-ttu-id="aa1eb-106">Rimuovere i modificatori come `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`o `Overridable`.</span><span class="sxs-lookup"><span data-stu-id="aa1eb-106">Remove modifiers such as `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`, or `Overridable`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="df3de-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="df3de-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="aa1eb-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="aa1eb-107">See also</span></span>
 
-- [<span data-ttu-id="df3de-108">Interfacce</span><span class="sxs-lookup"><span data-stu-id="df3de-108">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)
-- [<span data-ttu-id="df3de-109">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="df3de-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="aa1eb-108">Interfacce</span><span class="sxs-lookup"><span data-stu-id="aa1eb-108">Interfaces</span></span>](../programming-guide/language-features/interfaces/index.md)
+- [<span data-ttu-id="aa1eb-109">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="aa1eb-109">Structure Statement</span></span>](../language-reference/statements/structure-statement.md)
