--- a/docs/visual-basic/misc/bc31125.md
+++ b/docs/visual-basic/misc/bc31125.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31125
 ms.assetid: 754a0017-ec55-4d62-a7bd-c84ece058455
-ms.openlocfilehash: 3f93c06e354ec6a53dfb7a0e2c9c014dc4641164
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f863a7ebc8ffa728b6cf6a2b6551398498355f7e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585133"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84396025"
 ---
-# <a name="end-removehandler-must-be-preceded-by-a-matching-removehandler-declaration"></a><span data-ttu-id="c1882-102">'End RemoveHandler' deve essere preceduto da una dichiarazione 'RemoveHandler' corrispondente</span><span class="sxs-lookup"><span data-stu-id="c1882-102">'End RemoveHandler' must be preceded by a matching 'RemoveHandler' declaration</span></span>
-<span data-ttu-id="c1882-103">Un'istruzione `End RemoveHandler` si verifica senza un'istruzione `RemoveHandler` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="c1882-103">An `End RemoveHandler` statement occurred without a corresponding `RemoveHandler` statement.</span></span> <span data-ttu-id="c1882-104">`End RemoveHandler` deve essere preceduto da un'istruzione `RemoveHandler` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="c1882-104">`End RemoveHandler` must be preceded by a corresponding `RemoveHandler` statement.</span></span>  
+# <a name="end-removehandler-must-be-preceded-by-a-matching-removehandler-declaration"></a><span data-ttu-id="1d6c9-102">'End RemoveHandler' deve essere preceduto da una dichiarazione 'RemoveHandler' corrispondente</span><span class="sxs-lookup"><span data-stu-id="1d6c9-102">'End RemoveHandler' must be preceded by a matching 'RemoveHandler' declaration</span></span>
+<span data-ttu-id="1d6c9-103">Un'istruzione `End RemoveHandler` si verifica senza un'istruzione `RemoveHandler` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="1d6c9-103">An `End RemoveHandler` statement occurred without a corresponding `RemoveHandler` statement.</span></span> <span data-ttu-id="1d6c9-104">`End RemoveHandler` deve essere preceduto da un'istruzione `RemoveHandler` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="1d6c9-104">`End RemoveHandler` must be preceded by a corresponding `RemoveHandler` statement.</span></span>  
   
- <span data-ttu-id="c1882-105">**ID errore:** BC31125</span><span class="sxs-lookup"><span data-stu-id="c1882-105">**Error ID:** BC31125</span></span>  
+ <span data-ttu-id="1d6c9-105">**ID errore:** BC31125</span><span class="sxs-lookup"><span data-stu-id="1d6c9-105">**Error ID:** BC31125</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c1882-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c1882-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1d6c9-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1d6c9-106">To correct this error</span></span>  
   
-- <span data-ttu-id="c1882-107">Verificare che l'istruzione `RemoveHandler` precedente sia valida e sia stata digitata correttamente.</span><span class="sxs-lookup"><span data-stu-id="c1882-107">Check that the preceding `RemoveHandler` statement is valid and correctly spelled.</span></span>  
+- <span data-ttu-id="1d6c9-107">Verificare che l'istruzione `RemoveHandler` precedente sia valida e sia stata digitata correttamente.</span><span class="sxs-lookup"><span data-stu-id="1d6c9-107">Check that the preceding `RemoveHandler` statement is valid and correctly spelled.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c1882-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c1882-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1d6c9-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1d6c9-108">See also</span></span>
 
-- [<span data-ttu-id="c1882-109">Istruzione RemoveHandler</span><span class="sxs-lookup"><span data-stu-id="c1882-109">RemoveHandler Statement</span></span>](../../visual-basic/language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="c1882-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="c1882-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="1d6c9-109">Istruzione RemoveHandler</span><span class="sxs-lookup"><span data-stu-id="1d6c9-109">RemoveHandler Statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="1d6c9-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="1d6c9-110">Event Statement</span></span>](../language-reference/statements/event-statement.md)
