--- a/docs/visual-basic/misc/bc31148.md
+++ b/docs/visual-basic/misc/bc31148.md
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC31148
 ms.assetid: a3c55b04-4537-47c3-88e8-6e8044e9dc54
-ms.openlocfilehash: b8b85cbbc913f8a462c40ee4053d58dd425a5e0e
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 2a1380d35190fcc59af84ff2ac260d62cb75c4b0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912602"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386289"
 ---
-# <a name="xml-namespace-prefix-prefix-is-not-defined"></a><span data-ttu-id="5a566-102">Il prefisso dello spazio dei nomi XML 'prefix' non è definito</span><span class="sxs-lookup"><span data-stu-id="5a566-102">XML namespace prefix 'prefix' is not defined</span></span>
-<span data-ttu-id="5a566-103">È stato specificato un prefisso dello spazio dei nomi XML non definito per un valore letterale XML o una proprietà axis XML.</span><span class="sxs-lookup"><span data-stu-id="5a566-103">An undefined XML namespace prefix has been specified for an XML literal or an XML axis property.</span></span>  
+# <a name="xml-namespace-prefix-prefix-is-not-defined"></a><span data-ttu-id="1c950-102">Il prefisso dello spazio dei nomi XML 'prefix' non è definito</span><span class="sxs-lookup"><span data-stu-id="1c950-102">XML namespace prefix 'prefix' is not defined</span></span>
+<span data-ttu-id="1c950-103">È stato specificato un prefisso dello spazio dei nomi XML non definito per un valore letterale XML o una proprietà axis XML.</span><span class="sxs-lookup"><span data-stu-id="1c950-103">An undefined XML namespace prefix has been specified for an XML literal or an XML axis property.</span></span>  
   
- <span data-ttu-id="5a566-104">**ID errore:** BC31148</span><span class="sxs-lookup"><span data-stu-id="5a566-104">**Error ID:** BC31148</span></span>  
+ <span data-ttu-id="1c950-104">**ID errore:** BC31148</span><span class="sxs-lookup"><span data-stu-id="1c950-104">**Error ID:** BC31148</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5a566-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5a566-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1c950-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1c950-105">To correct this error</span></span>  
   
-- <span data-ttu-id="5a566-106">Definire il prefisso dello spazio dei nomi XML usando l'istruzione `Imports` .</span><span class="sxs-lookup"><span data-stu-id="5a566-106">Define the XML namespace prefix by using the `Imports` statement.</span></span>  
+- <span data-ttu-id="1c950-106">Definire il prefisso dello spazio dei nomi XML usando l'istruzione `Imports` .</span><span class="sxs-lookup"><span data-stu-id="1c950-106">Define the XML namespace prefix by using the `Imports` statement.</span></span>  
   
- <span data-ttu-id="5a566-107">-oppure-</span><span class="sxs-lookup"><span data-stu-id="5a566-107">-or-</span></span>  
+ <span data-ttu-id="1c950-107">-oppure-</span><span class="sxs-lookup"><span data-stu-id="1c950-107">-or-</span></span>  
   
-- <span data-ttu-id="5a566-108">Impostare il prefisso dello spazio dei nomi XML per il valore letterale XML o la proprietà axis XML su un prefisso dello spazio dei nomi XML definito in precedenza.</span><span class="sxs-lookup"><span data-stu-id="5a566-108">Modify the XML namespace prefix for the XML literal or XML axis property to a previously defined XML namespace prefix.</span></span>  
+- <span data-ttu-id="1c950-108">Impostare il prefisso dello spazio dei nomi XML per il valore letterale XML o la proprietà axis XML su un prefisso dello spazio dei nomi XML definito in precedenza.</span><span class="sxs-lookup"><span data-stu-id="1c950-108">Modify the XML namespace prefix for the XML literal or XML axis property to a previously defined XML namespace prefix.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5a566-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5a566-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1c950-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1c950-109">See also</span></span>
 
-- [<span data-ttu-id="5a566-110">Istruzione Imports (spazio dei nomi XML)</span><span class="sxs-lookup"><span data-stu-id="5a566-110">Imports Statement (XML Namespace)</span></span>](../../visual-basic/language-reference/statements/imports-statement-xml-namespace.md)
-- [<span data-ttu-id="5a566-111">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="5a566-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="5a566-112">XML</span><span class="sxs-lookup"><span data-stu-id="5a566-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="1c950-110">Istruzione Imports (spazio dei nomi XML)</span><span class="sxs-lookup"><span data-stu-id="1c950-110">Imports Statement (XML Namespace)</span></span>](../language-reference/statements/imports-statement-xml-namespace.md)
+- [<span data-ttu-id="1c950-111">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="1c950-111">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="1c950-112">XML</span><span class="sxs-lookup"><span data-stu-id="1c950-112">XML</span></span>](../programming-guide/language-features/xml/index.md)
