--- a/docs/visual-basic/misc/bc33112.md
+++ b/docs/visual-basic/misc/bc33112.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC33112
 ms.assetid: 50b2a2ad-248d-4faa-820d-bcdf0e8b4aad
-ms.openlocfilehash: c01f4da2d77012b5af507c2913c50a5d9821a1cb
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 051d200da180d266f403090971eb6833c46a58b3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626510"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395908"
 ---
-# <a name="nullable-modifier-cannot-be-used-with-a-variable-whose-implicit-type-is-object"></a><span data-ttu-id="03e12-102">Non è possibile usare il modificatore nullable con una variabile il cui tipo implicito è 'Object'</span><span class="sxs-lookup"><span data-stu-id="03e12-102">Nullable modifier cannot be used with a variable whose implicit type is 'Object'</span></span>
-<span data-ttu-id="03e12-103">Una dichiarazione di variabile include il modificatore di tipo nullable (?), ma non specifica un tipo o deduce un tipo assegnando un valore alla variabile dichiarata.</span><span class="sxs-lookup"><span data-stu-id="03e12-103">A variable declaration includes the nullable type modifier (?), but does not specify a type or infer a type by assigning a value to the declared variable.</span></span>  
+# <a name="nullable-modifier-cannot-be-used-with-a-variable-whose-implicit-type-is-object"></a><span data-ttu-id="d811c-102">Non è possibile usare il modificatore nullable con una variabile il cui tipo implicito è 'Object'</span><span class="sxs-lookup"><span data-stu-id="d811c-102">Nullable modifier cannot be used with a variable whose implicit type is 'Object'</span></span>
+<span data-ttu-id="d811c-103">Una dichiarazione di variabile include il modificatore di tipo nullable (?), ma non specifica un tipo o deduce un tipo assegnando un valore alla variabile dichiarata.</span><span class="sxs-lookup"><span data-stu-id="d811c-103">A variable declaration includes the nullable type modifier (?), but does not specify a type or infer a type by assigning a value to the declared variable.</span></span>  
   
- <span data-ttu-id="03e12-104">**ID errore:** BC33112</span><span class="sxs-lookup"><span data-stu-id="03e12-104">**Error ID:** BC33112</span></span>  
+ <span data-ttu-id="d811c-104">**ID errore:** BC33112</span><span class="sxs-lookup"><span data-stu-id="d811c-104">**Error ID:** BC33112</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="03e12-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="03e12-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d811c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d811c-105">To correct this error</span></span>  
   
-- <span data-ttu-id="03e12-106">Specificare un tipo quando si dichiara il parametro nullable.</span><span class="sxs-lookup"><span data-stu-id="03e12-106">Specify a type when declaring the nullable variable.</span></span> <span data-ttu-id="03e12-107">Il tipo non può essere <xref:System.Object>.</span><span class="sxs-lookup"><span data-stu-id="03e12-107">The type cannot be <xref:System.Object>.</span></span>  
+- <span data-ttu-id="d811c-106">Specificare un tipo quando si dichiara il parametro nullable.</span><span class="sxs-lookup"><span data-stu-id="d811c-106">Specify a type when declaring the nullable variable.</span></span> <span data-ttu-id="d811c-107">Il tipo non può essere <xref:System.Object>.</span><span class="sxs-lookup"><span data-stu-id="d811c-107">The type cannot be <xref:System.Object>.</span></span>  
   
-- <span data-ttu-id="03e12-108">Assegnare un valore quando si dichiara la variabile nullable.</span><span class="sxs-lookup"><span data-stu-id="03e12-108">Assign a value when declaring the nullable variable.</span></span> <span data-ttu-id="03e12-109">Il tipo della variabile nullable verrà dedotto dal valore assegnato.</span><span class="sxs-lookup"><span data-stu-id="03e12-109">The type of the nullable variable will be inferred from the assigned value.</span></span> <span data-ttu-id="03e12-110">Il tipo del valore non può essere <xref:System.Object>.</span><span class="sxs-lookup"><span data-stu-id="03e12-110">The type of the value cannot be <xref:System.Object>.</span></span>  
+- <span data-ttu-id="d811c-108">Assegnare un valore quando si dichiara la variabile nullable.</span><span class="sxs-lookup"><span data-stu-id="d811c-108">Assign a value when declaring the nullable variable.</span></span> <span data-ttu-id="d811c-109">Il tipo della variabile nullable verrà dedotto dal valore assegnato.</span><span class="sxs-lookup"><span data-stu-id="d811c-109">The type of the nullable variable will be inferred from the assigned value.</span></span> <span data-ttu-id="d811c-110">Il tipo del valore non può essere <xref:System.Object>.</span><span class="sxs-lookup"><span data-stu-id="d811c-110">The type of the value cannot be <xref:System.Object>.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="03e12-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="03e12-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d811c-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d811c-111">See also</span></span>
 
-- [<span data-ttu-id="03e12-112">Tipi di valori nullable</span><span class="sxs-lookup"><span data-stu-id="03e12-112">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [<span data-ttu-id="d811c-112">Tipi di valore Nullable</span><span class="sxs-lookup"><span data-stu-id="d811c-112">Nullable Value Types</span></span>](../programming-guide/language-features/data-types/nullable-value-types.md)
