--- a/docs/visual-basic/misc/bc36607.md
+++ b/docs/visual-basic/misc/bc36607.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC36607
 ms.assetid: f390bca5-12fe-4fe1-bd86-7f8ab66dfbd8
-ms.openlocfilehash: aedcda6603f088b6c63e7d2761092cb75ae40d51
-ms.sourcegitcommit: 43d10ef65f0f1fd6c3b515e363bde11a3fcd8d6d
+ms.openlocfilehash: 91cc722be720893046b886dcaa99f24b762996a0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/04/2020
-ms.locfileid: "78266794"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407015"
 ---
-# <a name="in-expected"></a><span data-ttu-id="3c2cc-102">Previsto 'In'</span><span class="sxs-lookup"><span data-stu-id="3c2cc-102">'In' expected</span></span>
-<span data-ttu-id="3c2cc-103">Una clausola `From` o `Aggregate` è stata specificata senza un operatore `In` .</span><span class="sxs-lookup"><span data-stu-id="3c2cc-103">A `From` or `Aggregate` clause has been specified without an `In` operator.</span></span> <span data-ttu-id="3c2cc-104">L'operatore `In` viene usato per identificare la raccolta nella query.</span><span class="sxs-lookup"><span data-stu-id="3c2cc-104">You use the `In` operator to identify the collection to query.</span></span>  
+# <a name="in-expected"></a><span data-ttu-id="f5dbe-102">Previsto 'In'</span><span class="sxs-lookup"><span data-stu-id="f5dbe-102">'In' expected</span></span>
+<span data-ttu-id="f5dbe-103">Una clausola `From` o `Aggregate` è stata specificata senza un operatore `In` .</span><span class="sxs-lookup"><span data-stu-id="f5dbe-103">A `From` or `Aggregate` clause has been specified without an `In` operator.</span></span> <span data-ttu-id="f5dbe-104">L'operatore `In` viene usato per identificare la raccolta nella query.</span><span class="sxs-lookup"><span data-stu-id="f5dbe-104">You use the `In` operator to identify the collection to query.</span></span>  
   
- <span data-ttu-id="3c2cc-105">**ID errore:** BC36607</span><span class="sxs-lookup"><span data-stu-id="3c2cc-105">**Error ID:** BC36607</span></span>  
+ <span data-ttu-id="f5dbe-105">**ID errore:** BC36607</span><span class="sxs-lookup"><span data-stu-id="f5dbe-105">**Error ID:** BC36607</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3c2cc-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3c2cc-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f5dbe-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f5dbe-106">To correct this error</span></span>  
 
-1. <span data-ttu-id="3c2cc-107">Aggiungere l'operatore `In` e i campi chiave alla clausola `From` o `Aggregate` .</span><span class="sxs-lookup"><span data-stu-id="3c2cc-107">Add the `In` operator and key fields to the `From` or `Aggregate` clause.</span></span> <span data-ttu-id="3c2cc-108">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="3c2cc-108">The following is an example:</span></span>  
+1. <span data-ttu-id="f5dbe-107">Aggiungere l'operatore `In` e i campi chiave alla clausola `From` o `Aggregate` .</span><span class="sxs-lookup"><span data-stu-id="f5dbe-107">Add the `In` operator and key fields to the `From` or `Aggregate` clause.</span></span> <span data-ttu-id="f5dbe-108">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="f5dbe-108">The following is an example:</span></span>  
 
 ```vb  
 Dim names = From pers In people
             Select pers.FirstName, pers.LastName  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="3c2cc-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3c2cc-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f5dbe-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f5dbe-109">See also</span></span>
 
-- [<span data-ttu-id="3c2cc-110">Clausola From</span><span class="sxs-lookup"><span data-stu-id="3c2cc-110">From Clause</span></span>](../../visual-basic/language-reference/queries/from-clause.md)
-- [<span data-ttu-id="3c2cc-111">Clausola Aggregate</span><span class="sxs-lookup"><span data-stu-id="3c2cc-111">Aggregate Clause</span></span>](../../visual-basic/language-reference/queries/aggregate-clause.md)
-- [<span data-ttu-id="3c2cc-112">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="3c2cc-112">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [<span data-ttu-id="3c2cc-113">LINQ</span><span class="sxs-lookup"><span data-stu-id="3c2cc-113">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [<span data-ttu-id="f5dbe-110">Clausola from</span><span class="sxs-lookup"><span data-stu-id="f5dbe-110">From Clause</span></span>](../language-reference/queries/from-clause.md)
+- [<span data-ttu-id="f5dbe-111">Aggregate Clause</span><span class="sxs-lookup"><span data-stu-id="f5dbe-111">Aggregate Clause</span></span>](../language-reference/queries/aggregate-clause.md)
+- [<span data-ttu-id="f5dbe-112">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="f5dbe-112">Introduction to LINQ in Visual Basic</span></span>](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="f5dbe-113">LINQ</span><span class="sxs-lookup"><span data-stu-id="f5dbe-113">LINQ</span></span>](../programming-guide/language-features/linq/index.md)
