--- a/docs/visual-basic/misc/bc42004.md
+++ b/docs/visual-basic/misc/bc42004.md
@@ -1,5 +1,5 @@
 ---
-title: Espressione in modo ricorsivo chiama l'operatore che lo contiene '<operatorsymbol>'
+title: L'espressione chiama in modo ricorsivo l'operatore ' <operatorsymbol> '
 ms.date: 07/20/2015
 f1_keywords:
 - BC42004
@@ -7,39 +7,39 @@ f1_keywords:
 helpviewer_keywords:
 - BC42004
 ms.assetid: a874c44a-3aec-447d-90f7-5659f1b2f5f6
-ms.openlocfilehash: c64902a74a94c3f59296cbb1f7f36296de69ea7c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 53ea2d2d590d2585c0aed2f2f37ced0a67f4f16d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627264"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84396934"
 ---
-# <a name="expression-recursively-calls-containing-operator-operatorsymbol"></a><span data-ttu-id="00017-102">Espressione in modo ricorsivo chiama l'operatore che lo contiene '\<simbolooperatore >'</span><span class="sxs-lookup"><span data-stu-id="00017-102">Expression recursively calls containing Operator '\<operatorsymbol>'</span></span>
-<span data-ttu-id="00017-103">Un'espressione all'interno di una routine di operatore usa l'operatore da definire.</span><span class="sxs-lookup"><span data-stu-id="00017-103">An expression within an operator procedure uses the operator being defined.</span></span> <span data-ttu-id="00017-104">Questo fa sì che la routine di operatore chiami se stessa per effetto dei tipi di dati usati.</span><span class="sxs-lookup"><span data-stu-id="00017-104">This results in the operator procedure calling itself because of the data types being used.</span></span>  
+# <a name="expression-recursively-calls-containing-operator-operatorsymbol"></a><span data-ttu-id="03794-102">L'espressione chiama in modo ricorsivo l'operatore ' \<operatorsymbol> '</span><span class="sxs-lookup"><span data-stu-id="03794-102">Expression recursively calls containing Operator '\<operatorsymbol>'</span></span>
+<span data-ttu-id="03794-103">Un'espressione all'interno di una routine di operatore usa l'operatore da definire.</span><span class="sxs-lookup"><span data-stu-id="03794-103">An expression within an operator procedure uses the operator being defined.</span></span> <span data-ttu-id="03794-104">Questo fa sì che la routine di operatore chiami se stessa per effetto dei tipi di dati usati.</span><span class="sxs-lookup"><span data-stu-id="03794-104">This results in the operator procedure calling itself because of the data types being used.</span></span>  
   
- <span data-ttu-id="00017-105">La routine di operatore che si sta definendo chiama se stessa se usa lo stesso operatore con uno degli operandi specificati di seguito:</span><span class="sxs-lookup"><span data-stu-id="00017-105">The operator procedure you are defining calls itself if it uses the same operator with any of the following:</span></span>  
+ <span data-ttu-id="03794-105">La routine di operatore che si sta definendo chiama se stessa se usa lo stesso operatore con uno degli operandi specificati di seguito:</span><span class="sxs-lookup"><span data-stu-id="03794-105">The operator procedure you are defining calls itself if it uses the same operator with any of the following:</span></span>  
   
-- <span data-ttu-id="00017-106">Gli stessi operandi per cui si sta definendo l'operatore</span><span class="sxs-lookup"><span data-stu-id="00017-106">The same operands for which you are defining the operator;</span></span>  
+- <span data-ttu-id="03794-106">Gli stessi operandi per cui si sta definendo l'operatore</span><span class="sxs-lookup"><span data-stu-id="03794-106">The same operands for which you are defining the operator;</span></span>  
   
-- <span data-ttu-id="00017-107">Gli operandi degli stessi tipi di dati per cui si sta definendo l'operatore oppure</span><span class="sxs-lookup"><span data-stu-id="00017-107">Operands of the same data types for which you are defining the operator; or</span></span>  
+- <span data-ttu-id="03794-107">Gli operandi degli stessi tipi di dati per cui si sta definendo l'operatore oppure</span><span class="sxs-lookup"><span data-stu-id="03794-107">Operands of the same data types for which you are defining the operator; or</span></span>  
   
-- <span data-ttu-id="00017-108">Gli operandi di tipi di dati che vengono ampliati ai tipi di dati per cui si sta definendo l'operatore.</span><span class="sxs-lookup"><span data-stu-id="00017-108">Operands of data types that widen to the data types for which you are defining the operator.</span></span>  
+- <span data-ttu-id="03794-108">Gli operandi di tipi di dati che vengono ampliati ai tipi di dati per cui si sta definendo l'operatore.</span><span class="sxs-lookup"><span data-stu-id="03794-108">Operands of data types that widen to the data types for which you are defining the operator.</span></span>  
   
- <span data-ttu-id="00017-109">Una *chiamata ricorsiva* avviene quando una routine chiama se stessa.</span><span class="sxs-lookup"><span data-stu-id="00017-109">A *recursive call* is when a procedure calls itself.</span></span> <span data-ttu-id="00017-110">Le chiamate ricorsive possono generare un *ciclo infinito*in cui il controllo passa ripetutamente attraverso lo stesso set di istruzioni fino a quando l'applicazione non viene terminata esternamente.</span><span class="sxs-lookup"><span data-stu-id="00017-110">Recursive calls can result in an *infinite loop*, in which control passes through the same set of statements repeatedly until your application is terminated externally.</span></span> <span data-ttu-id="00017-111">Se il codice non include uno o più test utilizzabili per terminare la ricorsione, si rischia di generare un ciclo infinito.</span><span class="sxs-lookup"><span data-stu-id="00017-111">If your code does not include one or more tests that can be used to terminate recursion, you risk an infinite loop.</span></span>  
+ <span data-ttu-id="03794-109">Una *chiamata ricorsiva* avviene quando una routine chiama se stessa.</span><span class="sxs-lookup"><span data-stu-id="03794-109">A *recursive call* is when a procedure calls itself.</span></span> <span data-ttu-id="03794-110">Le chiamate ricorsive possono generare un *ciclo infinito*in cui il controllo passa ripetutamente attraverso lo stesso set di istruzioni fino a quando l'applicazione non viene terminata esternamente.</span><span class="sxs-lookup"><span data-stu-id="03794-110">Recursive calls can result in an *infinite loop*, in which control passes through the same set of statements repeatedly until your application is terminated externally.</span></span> <span data-ttu-id="03794-111">Se il codice non include uno o più test utilizzabili per terminare la ricorsione, si rischia di generare un ciclo infinito.</span><span class="sxs-lookup"><span data-stu-id="03794-111">If your code does not include one or more tests that can be used to terminate recursion, you risk an infinite loop.</span></span>  
   
- <span data-ttu-id="00017-112">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="00017-112">By default, this message is a warning.</span></span> <span data-ttu-id="00017-113">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="00017-113">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="03794-112">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="03794-112">By default, this message is a warning.</span></span> <span data-ttu-id="03794-113">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="03794-113">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="00017-114">**ID errore:** BC42004</span><span class="sxs-lookup"><span data-stu-id="00017-114">**Error ID:** BC42004</span></span>  
+ <span data-ttu-id="03794-114">**ID errore:** BC42004</span><span class="sxs-lookup"><span data-stu-id="03794-114">**Error ID:** BC42004</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="00017-115">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="00017-115">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="03794-115">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="03794-115">To correct this error</span></span>  
   
-- <span data-ttu-id="00017-116">Se la logica richiede che la routine di operatore chiami se stessa, accertarsi di testare almeno una condizione che avverrà con certezza in un determinato momento e usare questo test per terminare le chiamate ricorsive.</span><span class="sxs-lookup"><span data-stu-id="00017-116">If your logic requires the operator procedure to call itself, then be sure you test for at least one condition that is certain to occur at some point, and use this test to terminate the recursive calls.</span></span>  
+- <span data-ttu-id="03794-116">Se la logica richiede che la routine di operatore chiami se stessa, accertarsi di testare almeno una condizione che avverrà con certezza in un determinato momento e usare questo test per terminare le chiamate ricorsive.</span><span class="sxs-lookup"><span data-stu-id="03794-116">If your logic requires the operator procedure to call itself, then be sure you test for at least one condition that is certain to occur at some point, and use this test to terminate the recursive calls.</span></span>  
   
-- <span data-ttu-id="00017-117">Se la logica non richiede che la routine di operatore chiami se stessa, rimuovere le eventuali chiamate ricorsive o sostituirle con istruzioni che non chiamino la loro stessa routine.</span><span class="sxs-lookup"><span data-stu-id="00017-117">If your logic does not require the operator procedure to call itself, then remove any recursive calls or replace them with statements that do not call their own procedure.</span></span>  
+- <span data-ttu-id="03794-117">Se la logica non richiede che la routine di operatore chiami se stessa, rimuovere le eventuali chiamate ricorsive o sostituirle con istruzioni che non chiamino la loro stessa routine.</span><span class="sxs-lookup"><span data-stu-id="03794-117">If your logic does not require the operator procedure to call itself, then remove any recursive calls or replace them with statements that do not call their own procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="00017-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="00017-118">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="03794-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="03794-118">See also</span></span>
 
-- [<span data-ttu-id="00017-119">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="00017-119">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="00017-120">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="00017-120">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="00017-121">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="00017-121">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="00017-122">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="00017-122">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="03794-119">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="03794-119">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="03794-120">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="03794-120">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="03794-121">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="03794-121">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="03794-122">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="03794-122">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
