commit translated contents

--- a/docs/visual-basic/misc/bc30121.md
+++ b/docs/visual-basic/misc/bc30121.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30121
 ms.assetid: 4ac5b018-5632-4661-8ac6-dbda2f8c4dfe
-ms.openlocfilehash: c2d063cf24a34d41b5577a49d918d45cb021c3e6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9c495311809264d08e7d59708705334da8f961ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64636535"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399943"
 ---
 # <a name="inherits-can-appear-only-once-within-a-class-statement-and-can-only-specify-one-class"></a>'Inherits' può essere specificato solo una volta in un'istruzione 'Class' e può specificare solo una classe
 Più istruzioni `Inherits` vengono visualizzate nella stessa classe o un'istruzione `Inherits` specifica più classi. Una classe può ereditare solo da una classe base.  
@@ -25,5 +25,5 @@ Più istruzioni `Inherits` vengono visualizzate nella stessa classe o un'istruzi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Inherits](../../visual-basic/language-reference/statements/inherits-statement.md)
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Inherits Statement](../language-reference/statements/inherits-statement.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
