--- a/docs/visual-basic/misc/bc30624.md
+++ b/docs/visual-basic/misc/bc30624.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30624
 ms.assetid: ee35bace-6914-4139-a581-7599cd6828cb
-ms.openlocfilehash: 7b3610e52e715d85602ab7a242d886135057b799
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7572c733c9c23205fea74197632585fa1832cdaa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646721"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401173"
 ---
 # <a name="structure-statement-must-end-with-a-matching-end-structure"></a>L'istruzione 'Structure' deve terminare con un oggetto 'End Structure' corrispondente
 Le strutture iniziano con un'istruzione `Structure` e terminano con un costrutto `End Structure` .  
@@ -25,5 +25,5 @@ Le strutture iniziano con un'istruzione `Structure` e terminano con un costrutto
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Strutture](../../visual-basic/programming-guide/language-features/data-types/structures.md)
-- [Strutture e classi](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
+- [Strutture](../programming-guide/language-features/data-types/structures.md)
+- [Strutture e classi](../programming-guide/language-features/data-types/structures-and-classes.md)
