--- a/docs/visual-basic/misc/bc30735.md
+++ b/docs/visual-basic/misc/bc30735.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo in un modulo non può essere dichiarato '<specifier>'
+title: Il tipo in un modulo non può essere dichiarato ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30735
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30735
 ms.assetid: df94d581-7f5b-4d42-ae2b-1ef912f133cc
-ms.openlocfilehash: 418680892e69bf0ecf9bc414e5f1ef130522786c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cfb72b6f10d16588692301d4fd481031d28f8dec
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657866"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405937"
 ---
-# <a name="type-in-a-module-cannot-be-declared-specifier"></a>Tipo in un modulo non può essere dichiarato '\<identificatore >'
+# <a name="type-in-a-module-cannot-be-declared-specifier"></a>Il tipo in un modulo non può essere dichiarato ' \<specifier> '
 All'interno di un modulo è stato dichiarato un tipo con modificatori non validi.  
   
  **ID errore:** BC30735  
@@ -25,5 +25,5 @@ All'interno di un modulo è stato dichiarato un tipo con modificatori non validi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Module](../../visual-basic/language-reference/statements/module-statement.md)
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
+- [Istruzione Module](../language-reference/statements/module-statement.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
