--- a/docs/visual-basic/misc/bc31408.md
+++ b/docs/visual-basic/misc/bc31408.md
@@ -1,5 +1,5 @@
 ---
-title: «<specifier1>'e'<specifier2>' non possono essere combinati
+title: "' <specifier1> ' è <specifier2> ' non possono essere combinati"
 ms.date: 07/20/2015
 f1_keywords:
 - bc31408
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31408
 ms.assetid: 3dab1c01-0d37-4d82-bb5f-9daf7ac1c4a4
-ms.openlocfilehash: 9d545280c927d963ed9c85cc2fe414da6dab9d5d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a6176fa0934125e08159d0d661b69ac59d465ea7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585032"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407834"
 ---
-# <a name="specifier1-and-specifier2-cannot-be-combined"></a>«\<specifier1 >' e '\<specifier2 >' non possono essere combinati
+# <a name="specifier1-and-specifier2-cannot-be-combined"></a>' \<specifier1> ' è \<specifier2> ' non possono essere combinati
 Due identificatori incompatibili, ad esempio `Shadows` e `Overrides` , vengono usati insieme.  
   
  **ID errore:** BC31408  
@@ -25,5 +25,5 @@ Due identificatori incompatibili, ad esempio `Shadows` e `Overrides` , vengono u
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
-- [Overrides](../../visual-basic/language-reference/modifiers/overrides.md)
+- [Shadows](../language-reference/modifiers/shadows.md)
+- [Override](../language-reference/modifiers/overrides.md)
