--- a/docs/visual-basic/misc/bc33035.md
+++ b/docs/visual-basic/misc/bc33035.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>'deve definire l'operatore'<determinantoperator>' da usare in un '<shortcircuitoperator>' espressione
+title: Il tipo '<typename>' deve definire l'operatore '<determinantoperator>' per poter essere usato in un'espressione '<shortcircuitoperator>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc33035
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC33035
 ms.assetid: 50a0a39f-63cd-4100-aea9-91b5b6ab5bbf
-ms.openlocfilehash: 40435e5ed59f64d02bf6875545304b7926caf229
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 26308f289d89de6010bc5d86308a197d08e6cf5d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913016"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407067"
 ---
-# <a name="type-typename-must-define-operator-determinantoperator-to-be-used-in-a-shortcircuitoperator-expression"></a>Tipo '\<nomeTipo >' deve definire l'operatore '\<operatoredeterminante >' da usare in un '\<operatorecortocircuito >' espressione
-Un [AndAlso Operator](../../visual-basic/language-reference/operators/andalso-operator.md) o un [OrElse Operator](../../visual-basic/language-reference/operators/orelse-operator.md) usa operandi di un tipo di classe o struttura, quando quella classe o struttura non definisce un operatore richiesto.  
+# <a name="type-typename-must-define-operator-determinantoperator-to-be-used-in-a-shortcircuitoperator-expression"></a>Il tipo '\<typename>' deve definire l'operatore '\<determinantoperator>' per poter essere usato in un'espressione '\<shortcircuitoperator>'
+Un [AndAlso Operator](../language-reference/operators/andalso-operator.md) o un [OrElse Operator](../language-reference/operators/orelse-operator.md) usa operandi di un tipo di classe o struttura, quando quella classe o struttura non definisce un operatore richiesto.  
   
  Poiché non si definisce direttamente un operatore di corto circuito (`AndAlso` o `OrElse`), è necessario definire gli operatori logici e determinanti corrispondenti. La tabella seguente mostra gli operatori richiesti.  
   
 |Operatore di corto circuito|Operatore logico|Operatore determinante|  
 |--------------------------------|----------------------|--------------------------|  
-|`AndAlso`|[Operatore And](../../visual-basic/language-reference/operators/and-operator.md)|[Operatore IsFalse](../../visual-basic/language-reference/operators/isfalse-operator.md)|  
-|`OrElse`|[Operatore Or](../../visual-basic/language-reference/operators/or-operator.md)|[Operatore IsTrue](../../visual-basic/language-reference/operators/istrue-operator.md)|  
+|`AndAlso`|[Operatore And](../language-reference/operators/and-operator.md)|[Operatore IsFalse](../language-reference/operators/isfalse-operator.md)|  
+|`OrElse`|[Operatore Or](../language-reference/operators/or-operator.md)|[Operatore IsTrue](../language-reference/operators/istrue-operator.md)|  
   
- Visual Basic Usa questi operatori logici e determinanti per costruire la logica di corto circuita `AndAlso` o `OrElse`. Per il funzionamento corretto di questa operazione, è necessario che gli operandi e il valore restituito della definizione di `And` o `Or` siano del tipo contenitore, vale a dire, il tipo della classe o della struttura in cui si definisce `And` o `Or`.  
+ Visual Basic usa questi operatori logici e determinanti per costruire la logica di corto circuito per `AndAlso` o `OrElse` . Per il funzionamento corretto di questa operazione, è necessario che gli operandi e il valore restituito della definizione di `And` o `Or` siano del tipo contenitore, vale a dire, il tipo della classe o della struttura in cui si definisce `And` o `Or`.  
   
  **ID errore:** BC33035  
   
@@ -34,8 +34,8 @@ Un [AndAlso Operator](../../visual-basic/language-reference/operators/andalso-op
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [Operatori logici e bit per bit in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/logical-and-bitwise-operators.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Operatori logici e bit per bit in Visual Basic](../programming-guide/language-features/operators-and-expressions/logical-and-bitwise-operators.md)
