--- a/docs/visual-basic/misc/bc36549.md
+++ b/docs/visual-basic/misc/bc36549.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà di tipo anonimo '<propertyname>' non può essere utilizzato nella definizione di un'espressione lambda nello stesso elenco di inizializzazione
+title: Impossibile usare la proprietà di tipo anonimo '<propertyname>' nella definizione di un'espressione lambda nello stesso elenco di inizializzazione
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36549
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36549
 ms.assetid: 6d04692a-957a-41ce-a19c-fcb06a186d1a
-ms.openlocfilehash: 1c42dc295f97fac54b474281be9b4ed8e64a2006
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2d169aafb3ee6b7ee18a250cc509159c1e3c96ca
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64753339"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378562"
 ---
-# <a name="anonymous-type-property-propertyname-cannot-be-used-in-the-definition-of-a-lambda-expression-within-the-same-initialization-list"></a>Proprietà di tipo anonimo '\<NomeProprietà >' non può essere utilizzato nella definizione di un'espressione lambda nello stesso elenco di inizializzazione
+# <a name="anonymous-type-property-propertyname-cannot-be-used-in-the-definition-of-a-lambda-expression-within-the-same-initialization-list"></a>Impossibile usare la proprietà di tipo anonimo '\<propertyname>' nella definizione di un'espressione lambda nello stesso elenco di inizializzazione
 
 Le proprietà definite nell'elenco di inizializzazione di tipo anonimo non possono far parte di una definizione di un'espressione lambda nello stesso elenco. Ad esempio, nel codice seguente, la proprietà `Num` non può essere inclusa nella definizione dell'oggetto `LambdaFun`.
 
@@ -61,5 +61,5 @@ Le proprietà definite nell'elenco di inizializzazione di tipo anonimo non posso
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Espressioni lambda](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
-- [Tipi anonimi](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [Espressioni lambda](../programming-guide/language-features/procedures/lambda-expressions.md)
+- [Tipi anonimi](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
