--- a/docs/visual-basic/misc/bc40011.md
+++ b/docs/visual-basic/misc/bc40011.md
@@ -1,5 +1,5 @@
 ---
-title: "'ComClassAttribute' è specificato per la classe<classname>', ma non ha membri pubblici che possano essere esposti a COM, pertanto non vengono generate interfacce COM"
+title: È stato specificato 'Microsoft.VisualBasic.ComClassAttribute' per la classe '<classname>', ma non ha membri pubblici che possano essere esposti a COM, pertanto non sono state generate interfacce COM
 ms.date: 07/20/2015
 f1_keywords:
 - bc40011
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC40011
 ms.assetid: 39aed273-bf27-4667-8116-022c4dd8f3c5
-ms.openlocfilehash: 9588880efb123793039f8e83ed284febbe4382af
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 22eff5a83cac0f466dde59f8f8489e322d9b3b2a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627474"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384898"
 ---
-# <a name="microsoftvisualbasiccomclassattribute-is-specified-for-class-classname-but-it-has-no-public-members-that-can-be-exposed-to-com-therefore-no-com-interfaces-are-generated"></a>'ComClassAttribute' è specificato per la classe\<NomeClasse >', ma non ha membri pubblici che possano essere esposti a COM, pertanto non vengono generate interfacce COM
+# <a name="microsoftvisualbasiccomclassattribute-is-specified-for-class-classname-but-it-has-no-public-members-that-can-be-exposed-to-com-therefore-no-com-interfaces-are-generated"></a>È stato specificato 'Microsoft.VisualBasic.ComClassAttribute' per la classe '\<classname>', ma non ha membri pubblici che possano essere esposti a COM, pertanto non sono state generate interfacce COM
 Una classe che usa un blocco di attributi `COMClassAttribute` non definisce proprietà o metodi `Public` . Se una classe deve essere esposta come oggetto COM, le sue proprietà e i suoi metodi devono essere dichiarati con accesso `Public` .  
   
  Per impostazione predefinita, si tratta di un messaggio di avviso. Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).  
@@ -27,5 +27,5 @@ Una classe che usa un blocco di attributi `COMClassAttribute` non definisce prop
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Public](../../visual-basic/language-reference/modifiers/public.md)
+- [Pubblica](../language-reference/modifiers/public.md)
 - [Classe ComClassAttribute](xref:Microsoft.VisualBasic.ComClassAttribute)
