--- a/docs/visual-basic/misc/bc30099.md
+++ b/docs/visual-basic/misc/bc30099.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30099
 ms.assetid: 37c65fc8-6ad9-456a-80b8-66288c62ef24
-ms.openlocfilehash: ed8bf1b2f0b5cd35a7e43c6628c89cb4bc08741b
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d6ccffcb1adb42284da8fe6295fed864425ec8f1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935746"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380471"
 ---
 # <a name="exit-select-can-only-appear-inside-a-select-statement"></a>'Exit Select' può essere specificato solo all'interno di un'istruzione 'Select'
 Un'istruzione `Exit Select` si verifica al di fuori di un blocco `Select` . `Exit Select` è valido solo tra un'istruzione `Select` o `Select Case` e un'istruzione `End Select` corrispondente.  
@@ -27,4 +27,4 @@ Un'istruzione `Exit Select` si verifica al di fuori di un blocco `Select` . `Exi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Select...Case](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [Istruzione Select...Case](../language-reference/statements/select-case-statement.md)
