--- a/docs/visual-basic/misc/bc30124.md
+++ b/docs/visual-basic/misc/bc30124.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30124
 ms.assetid: b24fc997-9a6b-44d1-b712-dab498a6fc72
-ms.openlocfilehash: 5ba6b093525e79326bf951dc2eaf965a56c55efc
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5ba71a89bce121deffdf74efa1e0fdf49fe75e4b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61682937"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359309"
 ---
 # <a name="property-without-a-readonly-or-writeonly-specifier-must-provide-both-a-get-and-a-set"></a>Una proprietà senza identificatore 'ReadOnly' o 'WriteOnly' deve fornire sia un elemento 'Get' che un elemento 'Set'
 Se una proprietà non è dichiarata come `ReadOnly` o `WriteOnly`, deve fornire le routine per la lettura e scrittura del proprio valore.  
@@ -27,6 +27,6 @@ Se una proprietà non è dichiarata come `ReadOnly` o `WriteOnly`, deve fornire 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
-- [Istruzione Get](../../visual-basic/language-reference/statements/get-statement.md)
-- [Istruzione Set](../../visual-basic/language-reference/statements/set-statement.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
+- [Istruzione Get](../language-reference/statements/get-statement.md)
+- [Istruzione set](../language-reference/statements/set-statement.md)
