--- a/docs/visual-basic/misc/bc31196.md
+++ b/docs/visual-basic/misc/bc31196.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31196
 ms.assetid: 36be5c92-dd6b-41d4-894a-2bd71d772092
-ms.openlocfilehash: e8b42ff2c01f978e85b7be110b8965eb3e4cfdb8
-ms.sourcegitcommit: 14ad34f7c4564ee0f009acb8bfc0ea7af3bc9541
+ms.openlocfilehash: 975f837e630223f4c86aac59fced246f522b7293
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 11/01/2019
-ms.locfileid: "73424006"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408029"
 ---
 # <a name="xml-literals-and-xml-axis-properties-are-not-available-during-this-debugging-session-because-they-are-not-used-in-this-assembly"></a>I valori letterali XML e le proprietà axis XML non sono disponibili nella sessione di debug perché non sono usati in questo assembly.
 È stato fatto riferimento a un valore letterale XML o a una proprietà Axis XML nella finestra **espressioni** di controllo o **controllo immediato** durante una sessione di debug in cui non sono disponibili le funzionalità XML in Visual Basic. Questo è il caso di un assembly che non usa il codice XML in Visual Basic funzionalità o è una build di rilascio.  
@@ -26,6 +26,6 @@ ms.locfileid: "73424006"
 ## <a name="see-also"></a>Vedere anche
 
 - [Debug dell'applicazione Visual Basic](/visualstudio/debugger/debugger-basics)
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [Proprietà Axis XML](../../visual-basic/language-reference/xml-axis/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [Proprietà Axis XML](../language-reference/xml-axis/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
