--- a/docs/visual-basic/misc/bc32068.md
+++ b/docs/visual-basic/misc/bc32068.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32068
 ms.assetid: cb5df484-76f9-4092-9d19-f26ddcf1c035
-ms.openlocfilehash: e43659db30e09632c49fbfddfbf5da955bde41d9
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 4ada1b6aa567392a6969b826eb9bc815af0d6ad4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913035"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413830"
 ---
 # <a name="local-variables-within-generic-methods-cannot-be-declared-static"></a>Le variabili locali all'interno di metodi generici non possono essere dichiarate 'Static'
 La dichiarazione di una variabile locale all'interno di una routine generica specifica `Static`.  
@@ -27,7 +27,7 @@ La dichiarazione di una variabile locale all'interno di una routine generica spe
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Static](../../visual-basic/language-reference/modifiers/static.md)
+- [Statico](../language-reference/modifiers/static.md)
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
