--- a/docs/visual-basic/misc/bc36010.md
+++ b/docs/visual-basic/misc/bc36010.md
@@ -1,5 +1,5 @@
 ---
-title: Operando ' using' di tipo '<typename>' deve implementare IDisposable
+title: L'operando 'Using' di tipo '<typename>' deve implementare 'System.IDisposable'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36010
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36010
 ms.assetid: ae9ed5d5-68ba-4950-bb7a-61327fa0e7d5
-ms.openlocfilehash: ca22ef92598eacc3716d2910e16b2678a149e54e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: dc76ee48b641a9266bc72a832b4f853ea6871ba1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588839"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379004"
 ---
-# <a name="using-operand-of-type-typename-must-implement-systemidisposable"></a>Operando ' using' di tipo '\<nomeTipo >' deve implementare IDisposable
+# <a name="using-operand-of-type-typename-must-implement-systemidisposable"></a>L'operando 'Using' di tipo '\<typename>' deve implementare 'System.IDisposable'
 Un'istruzione `Using` specifica una risorsa di un tipo che implementa l'interfaccia <xref:System.IDisposable> .  
   
  Lo scopo di un blocco `Using` è quello di garantire l'eliminazione di una risorsa di sistema all'uscita dal blocco. A questo scopo, è necessario che la risorsa esponga il metodo <xref:System.IDisposable.Dispose%2A> implementato da <xref:System.IDisposable>.  
@@ -28,5 +28,5 @@ Un'istruzione `Using` specifica una risorsa di un tipo che implementa l'interfac
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.IDisposable>
-- [Istruzione Using](../../visual-basic/language-reference/statements/using-statement.md)
-- [Procedura: Eliminare una risorsa di sistema](../../visual-basic/programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
+- [Istruzione using](../language-reference/statements/using-statement.md)
+- [Procedura: eliminare una risorsa di sistema](../programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
