--- a/docs/visual-basic/misc/bc36579.md
+++ b/docs/visual-basic/misc/bc36579.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36579
 ms.assetid: f59617b2-ca66-45c6-baaa-3c8bdf7f9a55
-ms.openlocfilehash: 8619f52e1e96814041945fe191ace00fb3d50a03
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 01eb77b2d3f10a1211866cee58e977dc4f5c9abe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64623285"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377574"
 ---
 # <a name="too-many-type-arguments"></a>Troppi argomenti di tipo
 È stato richiamato un metodo generico con più argomenti di tipo rispetto ai parametri di tipo.  
@@ -27,5 +27,5 @@ ms.locfileid: "64623285"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
