--- a/docs/visual-basic/misc/bc36586.md
+++ b/docs/visual-basic/misc/bc36586.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento non specificato per il parametro '<parametername>'del metodo di estensione '<methodname>'definito '<typename>'
+title: Argomento non specificato per il parametro ' <parametername> ' del metodo di estensione ' <methodname> ' definito in ' <typename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36586
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36586
 ms.assetid: e73f77e6-71c5-45e4-abe1-ce9b0e67e08c
-ms.openlocfilehash: 31a4862e0449273db4a99c52fb318abbe7aad394
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6ad8352fe170dd3e24056815ef97c0661bf5f9eb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632378"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377327"
 ---
-# <a name="argument-not-specified-for-parameter-parametername-of-extension-method-methodname-defined-in-typename"></a>Argomento non specificato per il parametro '\<nomeparametro >' del metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >'
+# <a name="argument-not-specified-for-parameter-parametername-of-extension-method-methodname-defined-in-typename"></a>Argomento non specificato per il parametro ' \<parametername> ' del metodo di estensione ' \<methodname> ' definito in ' \<typename> '
 Non è stato fornito un argomento per un parametro obbligatorio in un metodo di estensione.  
   
  **ID errore:** BC36586  
@@ -25,6 +25,6 @@ Non è stato fornito un argomento per un parametro obbligatorio in un metodo di 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
 
-- [Risoluzione dei problemi relativi alle routine](../../visual-basic/programming-guide/language-features/procedures/troubleshooting-procedures.md)
+- [Risoluzione dei problemi relativi alle routine](../programming-guide/language-features/procedures/troubleshooting-procedures.md)
