--- a/docs/visual-basic/misc/bc40024.md
+++ b/docs/visual-basic/misc/bc40024.md
@@ -1,5 +1,5 @@
 ---
-title: Proprietà '<propertyname>'dichiara in modo implicito'<implicitmembername>', che è in conflitto con un membro dichiarato in modo implicito per il membro'<membername>'nella classe base'<baseclassname>'
+title: La proprietà' <propertyname> ' dichiara in modo implicito ' <implicitmembername> ', che è in conflitto con un membro dichiarato in modo implicito per il membro ' <membername> ' nella classe base ' <baseclassname> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40024
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC40024
 ms.assetid: fab4f290-a41f-47d6-9bdb-44eb8dd395d5
-ms.openlocfilehash: 9d81bbd12ba3286bee571fcd6fae02842f8ba6c7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a1ada5cda756e8b66cafe6ea8fd36b081ce0c045
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64624410"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384235"
 ---
-# <a name="property-propertyname-implicitly-declares-implicitmembername-which-conflicts-with-a-member-implicitly-declared-for-member-membername-in-the-base-class-baseclassname"></a>Proprietà '\<NomeProprietà >' dichiara in modo implicito '\<nomemembroimplicito > ', che è in conflitto con un membro dichiarato in modo implicito per il membro'\<nomeMembro >' nella classe base\<nomeclassebase > '
-Membro '\<membername1 >' dichiara in modo implicito '\<nomemembroimplicito > ', che è in conflitto con un membro dichiarato in modo implicito per il membro'\<membername2 >' nella classe base\<nomeclassebase >'. Quindi, il membro non deve essere dichiarato 'Overloads'.  
+# <a name="property-propertyname-implicitly-declares-implicitmembername-which-conflicts-with-a-member-implicitly-declared-for-member-membername-in-the-base-class-baseclassname"></a>La proprietà' \<propertyname> ' dichiara in modo implicito ' \<implicitmembername> ', che è in conflitto con un membro dichiarato in modo implicito per il membro ' \<membername> ' nella classe base ' \<baseclassname> '
+Il membro ' \<membername1> ' dichiara in modo implicito ' \<implicitmembername> ', che è in conflitto con un membro dichiarato in modo implicito per il membro ' \<membername2> ' nella classe base ' \<baseclassname> '. Quindi, il membro non deve essere dichiarato 'Overloads'.  
   
- Una proprietà in una classe derivata genera un membro implicito con lo stesso nome di un membro implicito della classe base e specifica la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) .  
+ Una proprietà in una classe derivata genera un membro implicito con lo stesso nome di un membro implicito della classe base e specifica la parola chiave [Overloads](../language-reference/modifiers/overloads.md) .  
   
- L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe. Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già `Overloads`. Dal momento che i membri impliciti non specificano `Overloads`, il compilatore presuppone che questa proprietà [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) sia il membro della classe base implicita.  
+ L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe. Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già `Overloads`. Dal momento che i membri impliciti non specificano `Overloads`, il compilatore presuppone che questa proprietà [Shadows](../language-reference/modifiers/shadows.md) sia il membro della classe base implicita.  
   
  Il compilatore Visual Basic crea membri impliciti corrispondenti a determinati elementi di programmazione dichiarati. La tabella seguente riepiloga questi membri impliciti o *sintetici*.  
   
 |Elemento dichiarato|Membri creati in modo implicito|  
 |----------------------|--------------------------------|  
-|Enumerazione|Membro`value__` |  
-|event|Routine`add_<eventname>` <br /><br /> Routine`remove_<eventname>` <br /><br /> Campo di`<eventname>Event` <br /><br /> Delegato`<eventname>EventHandler` |  
-|Proprietà|Routine`get_<propertyname>` <br /><br /> Routine`set_<propertyname>` |  
-|Membro`My.Form` , membro `My.WebService` , membro or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute> |Variabile`m_<variablename>` `Static` <br /><br /> Proprietà`<variablename>` <br /><br /> Routine`get_<variablename>` <br /><br /> Routine`set_<variablename>` |  
-|Variabile`WithEvents` |Variabile `_<variablename>`<br /><br /> Proprietà `<variablename>`<br /><br /> Routine`get_<variablename>` <br /><br /> Routine`set_<variablename>` |  
+|Enumerazione|Membro`value__`|  
+|Event|Routine`add_<eventname>`<br /><br /> Routine`remove_<eventname>`<br /><br /> Campo di`<eventname>Event`<br /><br /> Delegato`<eventname>EventHandler`|  
+|Proprietà|Routine`get_<propertyname>`<br /><br /> Routine`set_<propertyname>`|  
+|Membro`My.Form` , membro `My.WebService` , membro or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute>|`m_<variablename>``Static`variabile<br /><br /> Proprietà `<variablename>`<br /><br /> Routine`get_<variablename>`<br /><br /> Routine`set_<variablename>`|  
+|Variabile|Variabile<br /><br /> Proprietà `<variablename>`<br /><br /> Routine`get_<variablename>`<br /><br /> Routine`set_<variablename>`|  
   
  A causa del rischio di conflitti di nomi, è consigliabile evitare di denominare gli elementi di programmazione dichiarati usando la stessa forma di qualsiasi membro implicito. Ad esempio, è consigliabile evitare qualsiasi nome di elemento che inizia con `get_` o `set_`.  
   
@@ -39,10 +39,10 @@ Membro '\<membername1 >' dichiara in modo implicito '\<nomemembroimplicito > ', 
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Se si prevede di nascondere il membro implicito della classe base, sostituire la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) con la parola chiave [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) nella dichiarazione della proprietà.  
+- Se si prevede di nascondere il membro implicito della classe base, sostituire la parola chiave [Overloads](../language-reference/modifiers/overloads.md) con la parola chiave [Shadows](../language-reference/modifiers/shadows.md) nella dichiarazione della proprietà.  
   
 - Se non si intende nascondere il membro implicito della classe base, modificare il nome della proprietà per evitare conflitti con i nomi elencati nella tabella precedente.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nomi di elementi dichiarati](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
+- [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md)
