--- a/docs/visual-basic/misc/bc42024.md
+++ b/docs/visual-basic/misc/bc42024.md
@@ -1,5 +1,5 @@
 ---
-title: "Variabile locale non usata: '<localvariablename>'"
+title: Variabile locale non usata:' <localvariablename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42024
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42024
 ms.assetid: 749b1315-0f85-4f7e-b68b-8cc4346c502b
-ms.openlocfilehash: 2033f288232e231888635312d829b719c1578f98
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: a14645466fb2271641338be90ba00766d729bef8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61595478"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395688"
 ---
-# <a name="unused-local-variable-localvariablename"></a>Variabile locale non usata: '\<nomevariabilelocale >'
+# <a name="unused-local-variable-localvariablename"></a>Variabile locale non usata:' \<localvariablename> '
 Una variabile locale di una routine è dichiarata, ma non viene mai usata.  
   
  Potrebbe esserci un errore di ortografia nelle variabili locali della routine. Se questa variabile è di fatto usata in un'altra istruzione, ma con una grafia diversa, si presenta al compilatore come se si trattasse di due variabili diverse.  
@@ -31,5 +31,5 @@ Una variabile locale di una routine è dichiarata, ma non viene mai usata.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nomi di elementi dichiarati](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
+- [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
